Using proper links in notes.

--- a/notes/20150124.md
+++ b/notes/20150124.md
@@ -61,21 +61,21 @@ New age **frequencies**, **vibrations**, & **Spirits** are synonyms.
 
 Mind/Body dualism
 
-http://en.wikipedia.org/wiki/Reductionism
+<a href="http://en.wikipedia.org/wiki/Reductionism" target="_blank">http://en.wikipedia.org/wiki/Reductionism</a>
 
-http://en.wikipedia.org/wiki/Systems_thinking
+<a href="http://en.wikipedia.org/wiki/Systems_thinking" target="_blank">http://en.wikipedia.org/wiki/Systems_thinking</a>
 
-http://en.wikipedia.org/wiki/Systems_philosophy
+<a href="http://en.wikipedia.org/wiki/Systems_philosophy" target="_blank">http://en.wikipedia.org/wiki/Systems_philosophy</a>
 
-http://en.wikipedia.org/wiki/Systems_science
+<a href="http://en.wikipedia.org/wiki/Systems_science" target="_blank">http://en.wikipedia.org/wiki/Systems_science</a>
 
-http://en.wikipedia.org/wiki/Emergentism
+<a href="http://en.wikipedia.org/wiki/Emergentism" target="_blank">http://en.wikipedia.org/wiki/Emergentism</a>
 
-http://en.wikipedia.org/wiki/Physicalism
+<a href="http://en.wikipedia.org/wiki/Physicalism" target="_blank">http://en.wikipedia.org/wiki/Physicalism</a>
 
-http://en.wikipedia.org/wiki/Scientism
+<a href="http://en.wikipedia.org/wiki/Scientism" target="_blank">http://en.wikipedia.org/wiki/Scientism</a>
 
-http://en.wikipedia.org/wiki/Epiphenomenon
+<a href="http://en.wikipedia.org/wiki/Epiphenomenon" target="_blank">http://en.wikipedia.org/wiki/Epiphenomenon</a>
 
 ---
 
@@ -107,7 +107,7 @@ I am a creative spirit. My memory is not so good. I need to keep my mind clear t
 
 ---
 
-http://en.wikipedia.org/wiki/Epiphenomenon
+<a href="http://en.wikipedia.org/wiki/Epiphenomenon" target="_blank">http://en.wikipedia.org/wiki/Epiphenomenon</a>
 
 > An epiphenomenon (plural: epiphenomena) is a secondary phenomenon that occurs alongside or in parallel to a primary phenomenon.
 
@@ -121,7 +121,7 @@ Bruce Lee had a difficult time gaining social acceptance. However, Jeet Kun Do i
 
 ---
 
-http://en.wikipedia.org/wiki/Epiphenomenon
+<a href="http://en.wikipedia.org/wiki/Epiphenomenon" target="_blank">http://en.wikipedia.org/wiki/Epiphenomenon</a>
 
 > ### Philosophy of mind and psychology
 
