--- a/notes/20150125.md
+++ b/notes/20150125.md
@@ -1,18 +1,18 @@
-http://rob.conery.io/2015/01/24/staying-foolish/
+<a href="http://rob.conery.io/2015/01/24/staying-foolish/" target="_blank">http://rob.conery.io/2015/01/24/staying-foolish/</a>
 
-http://themindunleashed.org/2014/03/15-tips-empaths-highly-sensitive-people.html
+<a href="http://themindunleashed.org/2014/03/15-tips-empaths-highly-sensitive-people.html" target="_blank">http://themindunleashed.org/2014/03/15-tips-empaths-highly-sensitive-people.html</a>
 
-http://thespiritscience.net/2014/10/02/the-4-steps-to-getting-out-of-a-funk/
+<a href="http://thespiritscience.net/2014/10/02/the-4-steps-to-getting-out-of-a-funk/" target="_blank">http://thespiritscience.net/2014/10/02/the-4-steps-to-getting-out-of-a-funk/</a>
 
-http://thespiritscience.net/2014/03/26/the-science-of-hollow-earth/
+<a href="http://thespiritscience.net/2014/03/26/the-science-of-hollow-earth/" target="_blank">http://thespiritscience.net/2014/03/26/the-science-of-hollow-earth/</a>
 
-http://earthweareone.com/mystery-radio-waves-from-deep-space-captured-live-sender-unknown/
+<a href="http://earthweareone.com/mystery-radio-waves-from-deep-space-captured-live-sender-unknown/" target="_blank">http://earthweareone.com/mystery-radio-waves-from-deep-space-captured-live-sender-unknown/</a>
 
-http://www.newrealities.com/index.php/articles-on-sexuality/item/3366-bhairavi-tantra-by-bhairavi-ma
+<a href="http://www.newrealities.com/index.php/articles-on-sexuality/item/3366-bhairavi-tantra-by-bhairavi-ma" target="_blank">http://www.newrealities.com/index.php/articles-on-sexuality/item/3366-bhairavi-tantra-by-bhairavi-ma</a>
 
-http://www.newrealities.com/index.php/articles-on-sexuality/item/3380-writers-forward
+<a href="http://www.newrealities.com/index.php/articles-on-sexuality/item/3380-writers-forward" target="_blank">http://www.newrealities.com/index.php/articles-on-sexuality/item/3380-writers-forward</a>
 
-http://www.newrealities.com/index.php/sexuality-sensuality
+<a href="http://www.newrealities.com/index.php/sexuality-sensuality" target="_blank">http://www.newrealities.com/index.php/sexuality-sensuality</a>
 
 ---
 
@@ -26,11 +26,11 @@ That may be an illusory goal. Information has patterns. The Physical System may 
 
 ---
 
-http://en.wikipedia.org/wiki/Epiphenomenon
+<a href="http://en.wikipedia.org/wiki/Epiphenomenon" target="_blank">http://en.wikipedia.org/wiki/Epiphenomenon</a>
 
-http://en.wikipedia.org/wiki/Zenon_Pylyshyn
+<a href="http://en.wikipedia.org/wiki/Zenon_Pylyshyn" target="_blank">http://en.wikipedia.org/wiki/Zenon_Pylyshyn</a>
 
-http://en.wikipedia.org/wiki/Falsifiability
+<a href="http://en.wikipedia.org/wiki/Falsifiability" target="_blank">http://en.wikipedia.org/wiki/Falsifiability</a>
 
 ---
 
@@ -48,9 +48,9 @@ Observational rules are often quantified using statistics.
 
 ---
 
-http://en.wikipedia.org/wiki/Downward_causation
+<a href="http://en.wikipedia.org/wiki/Downward_causation" target="_blank">http://en.wikipedia.org/wiki/Downward_causation</a>
 
-http://en.wikipedia.org/wiki/Supervenience
+<a href="http://en.wikipedia.org/wiki/Supervenience" target="_blank">http://en.wikipedia.org/wiki/Supervenience</a>
 
 ---
 
@@ -86,11 +86,11 @@ Greedy Reductionism is akin to playing **7 Degrees to Kevin Bacon**.
 
 ---
 
-http://en.wikipedia.org/wiki/Internalism_and_externalism
+<a href="http://en.wikipedia.org/wiki/Internalism_and_externalism" target="_blank">http://en.wikipedia.org/wiki/Internalism_and_externalism</a>
 
 ---
 
-http://en.wikipedia.org/wiki/Supervenience
+<a href="http://en.wikipedia.org/wiki/Supervenience" target="_blank">http://en.wikipedia.org/wiki/Supervenience</a>
 
 > The intuitive idea is that if you could make a physical copy of a person, you'd also be making a psychological copy of that person. The reverse does not hold: two people could be in the same mental state, but that mental state could be supported by different brain states (the same mental state could be "multiply realizable" by different brain states). The properties in B are called the base properties (or sometimes subjacent or subvenient properties), and the properties in A are called the supervenient properties.
 
@@ -100,9 +100,9 @@ In a Star Trek teleportation device, the physical state of the body is copied fr
 
 Multiple systems on multiple abstraction levels are at play.
 
-http://en.wikipedia.org/wiki/List_of_mathematical_symbols
+<a href="http://en.wikipedia.org/wiki/List_of_mathematical_symbols" target="_blank">http://en.wikipedia.org/wiki/List_of_mathematical_symbols</a>
 
-http://math.stackexchange.com/questions/123699/what-do-subscripted-numbers-in-an-equation-mean
+<a href="http://math.stackexchange.com/questions/123699/what-do-subscripted-numbers-in-an-equation-mean" target="_blank">http://math.stackexchange.com/questions/123699/what-do-subscripted-numbers-in-an-equation-mean</a>
 
 ---
 
@@ -112,12 +112,12 @@ Mathematics does allow algorithmic abstraction.
 
 ---
 
-http://wakeup-world.com/2014/06/26/understanding-and-dismantling-the-global-control-system/
+<a href="http://wakeup-world.com/2014/06/26/understanding-and-dismantling-the-global-control-system/" target="_blank">http://wakeup-world.com/2014/06/26/understanding-and-dismantling-the-global-control-system/</a>
 
 ---
 
-http://en.wikipedia.org/wiki/Deontological_ethics
+<a href="http://en.wikipedia.org/wiki/Deontological_ethics" target="_blank">http://en.wikipedia.org/wiki/Deontological_ethics</a>
 
-http://en.wiktionary.org/wiki/deontology
+<a href="http://en.wiktionary.org/wiki/deontology" target="_blank">http://en.wiktionary.org/wiki/deontology</a>
 
-http://en.wikipedia.org/wiki/Scientific_method
+<a href="http://en.wikipedia.org/wiki/Scientific_method" target="_blank">http://en.wikipedia.org/wiki/Scientific_method</a>
