--- a/notes/20150126.md
+++ b/notes/20150126.md
@@ -1,3 +1,3 @@
-http://fractalenlightenment.com/33044/life/five-unconscious-beliefs-that-may-be-holding-you-back
+<a href="http://fractalenlightenment.com/33044/life/five-unconscious-beliefs-that-may-be-holding-you-back" target="_blank">http://fractalenlightenment.com/33044/life/five-unconscious-beliefs-that-may-be-holding-you-back</a>
 
-http://wakeup-world.com/2015/01/15/the-wise-woman-within/
+<a href="http://wakeup-world.com/2015/01/15/the-wise-woman-within/" target="_blank">http://wakeup-world.com/2015/01/15/the-wise-woman-within/</a>
