--- a/notes/20150130.md
+++ b/notes/20150130.md
@@ -6,47 +6,47 @@ Cheap wordplay make the world go round
 
 ---
 
-http://truththeory.com/2014/07/30/graham-hancock-breaks-the-set-on-ted-censorship-lost-civilizations-war-on-consciousness/
+<a href="http://truththeory.com/2014/07/30/graham-hancock-breaks-the-set-on-ted-censorship-lost-civilizations-war-on-consciousness/" target="_blank">http://truththeory.com/2014/07/30/graham-hancock-breaks-the-set-on-ted-censorship-lost-civilizations-war-on-consciousness/</a>
 
-http://soulspottv.com/blog/shaman-uses-visions-to-summn-a-woman-to-visit-her-when-they-meet-her-life-is-changed-forever/
+<a href="http://soulspottv.com/blog/shaman-uses-visions-to-summn-a-woman-to-visit-her-when-they-meet-her-life-is-changed-forever/" target="_blank">http://soulspottv.com/blog/shaman-uses-visions-to-summn-a-woman-to-visit-her-when-they-meet-her-life-is-changed-forever/</a>
 
-http://thespiritscience.net/2014/02/26/spirit-science-1-thoughts/
+<a href="http://thespiritscience.net/2014/02/26/spirit-science-1-thoughts/" target="_blank">http://thespiritscience.net/2014/02/26/spirit-science-1-thoughts/</a>
 
-http://ideas.ted.com/2015/01/23/want-to-be-happy-slow-down/
+<a href="http://ideas.ted.com/2015/01/23/want-to-be-happy-slow-down/" target="_blank">http://ideas.ted.com/2015/01/23/want-to-be-happy-slow-down/</a>
 
-http://www.newsweek.com/2015/02/06/what-silicon-valley-thinks-women-302821.html
+<a href="http://www.newsweek.com/2015/02/06/what-silicon-valley-thinks-women-302821.html" target="_blank">http://www.newsweek.com/2015/02/06/what-silicon-valley-thinks-women-302821.html</a>
 
-http://www.elephantjournal.com/2015/01/3-ways-to-create-space-for-multiple-lovers/
+<a href="http://www.elephantjournal.com/2015/01/3-ways-to-create-space-for-multiple-lovers/" target="_blank">http://www.elephantjournal.com/2015/01/3-ways-to-create-space-for-multiple-lovers/</a>
 
-http://www.vice.com/read/video-game-addiction-is-destroying-american-lives-456
+<a href="http://www.vice.com/read/video-game-addiction-is-destroying-american-lives-456" target="_blank">http://www.vice.com/read/video-game-addiction-is-destroying-american-lives-456</a>
 
-http://wakeup-world.com/2012/09/12/gaining-true-life-long-immunity-to-disease/
+<a href="http://wakeup-world.com/2012/09/12/gaining-true-life-long-immunity-to-disease/" target="_blank">http://wakeup-world.com/2012/09/12/gaining-true-life-long-immunity-to-disease/</a>
 
-http://archive.wired.com/science/discoveries/news/2006/01/70015
+<a href="http://archive.wired.com/science/discoveries/news/2006/01/70015" target="_blank">http://archive.wired.com/science/discoveries/news/2006/01/70015</a>
 
-http://www.j15r.com/blog/2014/05/23/Box2d_2014_Update
+<a href="http://www.j15r.com/blog/2014/05/23/Box2d_2014_Update" target="_blank">http://www.j15r.com/blog/2014/05/23/Box2d_2014_Update</a>
 
-http://arstechnica.com/science/2015/01/the-connections-in-autistic-brains-are-idiosyncratic-and-individualized/
+<a href="http://arstechnica.com/science/2015/01/the-connections-in-autistic-brains-are-idiosyncratic-and-individualized/" target="_blank">http://arstechnica.com/science/2015/01/the-connections-in-autistic-brains-are-idiosyncratic-and-individualized/</a>
 
-http://aeon.co/magazine/culture/welcome-to-the-scarcity-games/?
+<a href="http://aeon.co/magazine/culture/welcome-to-the-scarcity-games/?" target="_blank">http://aeon.co/magazine/culture/welcome-to-the-scarcity-games/?</a>
 
-http://www.bbc.com/news/science-environment-30993208
+<a href="http://www.bbc.com/news/science-environment-30993208" target="_blank">http://www.bbc.com/news/science-environment-30993208</a>
 
-http://spin.atomicobject.com/2015/01/30/remote-first-communication/
+<a href="http://spin.atomicobject.com/2015/01/30/remote-first-communication/" target="_blank">http://spin.atomicobject.com/2015/01/30/remote-first-communication/</a>
 
-http://www.elephantjournal.com/2014/08/how-it-feels-to-have-anxiety-in-a-relationship-samuel-leighton-dore/
+<a href="http://www.elephantjournal.com/2014/08/how-it-feels-to-have-anxiety-in-a-relationship-samuel-leighton-dore/" target="_blank">http://www.elephantjournal.com/2014/08/how-it-feels-to-have-anxiety-in-a-relationship-samuel-leighton-dore/</a>
 
-http://nautil.us/issue/6/secret-codes/safecracking-the-brain-rd
+<a href="http://nautil.us/issue/6/secret-codes/safecracking-the-brain-rd" target="_blank">http://nautil.us/issue/6/secret-codes/safecracking-the-brain-rd</a>
 
-http://www.bbc.com/future/story/20150130-the-man-who-studies-evil
+<a href="http://www.bbc.com/future/story/20150130-the-man-who-studies-evil" target="_blank">http://www.bbc.com/future/story/20150130-the-man-who-studies-evil</a>
 
-http://www.heartmath.org/
+<a href="http://www.heartmath.org/" target="_blank">http://www.heartmath.org/</a>
 
-http://www.collective-evolution.com/2014/11/24/what-science-is-telling-us-about-the-hearts-intuitive-intelligence/
+<a href="http://www.collective-evolution.com/2014/11/24/what-science-is-telling-us-about-the-hearts-intuitive-intelligence/" target="_blank">http://www.collective-evolution.com/2014/11/24/what-science-is-telling-us-about-the-hearts-intuitive-intelligence/</a>
 
-https://medium.com/@codepo8/i-feel-like-a-fraud-and-thats-a-good-thing-cc1fa338b902
+<a href="https://medium.com/@codepo8/i-feel-like-a-fraud-and-thats-a-good-thing-cc1fa338b902" target="_blank">https://medium.com/@codepo8/i-feel-like-a-fraud-and-thats-a-good-thing-cc1fa338b902</a>
 
-http://rethinkdb.com/blog/realtime-web/
+<a href="http://rethinkdb.com/blog/realtime-web/" target="_blank">http://rethinkdb.com/blog/realtime-web/</a>
 
 ---
 
