--- a/notes/20150204.md
+++ b/notes/20150204.md
@@ -1,6 +1,6 @@
 The paradigm of the violent tribe.
 
-http://ranprieur.com/
+<a href="http://ranprieur.com/" target="_blank">http://ranprieur.com/</a>
 
 ---
 
@@ -28,15 +28,15 @@ And the day came when the risk to remain tight in a bud was more painful than th
 
 ---
 
-https://www.youtube.com/watch?v=dhuGy7nnNaE
+<a href="https://www.youtube.com/watch?v=dhuGy7nnNaE" target="_blank">https://www.youtube.com/watch?v=dhuGy7nnNaE</a>
 
 ---
 
-https://www.youtube.com/watch?x-yt-ts=1422579428&x-yt-cl=85114404&v=h2em1x2j9-o&spfreload=1
+<a href="https://www.youtube.com/watch?x-yt-ts=1422579428&x-yt-cl=85114404&v=h2em1x2j9-o&spfreload=1" target="_blank">https://www.youtube.com/watch?x-yt-ts=1422579428&x-yt-cl=85114404&v=h2em1x2j9-o&spfreload=1</a>
 
 ---
 
-https://www.youtube.com/watch?v=bOKl04TWVsU
+<a href="https://www.youtube.com/watch?v=bOKl04TWVsU" target="_blank">https://www.youtube.com/watch?v=bOKl04TWVsU</a>
 
 Make it sexually desirable to be conscious.
 
@@ -46,7 +46,7 @@ When you're actually in the belly of the beast, you're on the cutting edge of th
 
 ---
 
-https://www.youtube.com/watch?v=-klNO-AjW6M
+<a href="https://www.youtube.com/watch?v=-klNO-AjW6M" target="_blank">https://www.youtube.com/watch?v=-klNO-AjW6M</a>
 
 ---
 
