--- a/notes/20150205.md
+++ b/notes/20150205.md
@@ -1,6 +1,6 @@
 I can support someone who lives on the margins.
 
-https://www.youtube.com/watch?v=6N0fzISZ7io
+<a href="https://www.youtube.com/watch?v=6N0fzISZ7io" target="_blank">https://www.youtube.com/watch?v=6N0fzISZ7io</a>
 
 ---
 
@@ -32,7 +32,7 @@ A companion does not need to be a single person job.
 
 ---
 
-https://www.youtube.com/watch?v=4ECi6WJpbzE
+<a href="https://www.youtube.com/watch?v=4ECi6WJpbzE" target="_blank">https://www.youtube.com/watch?v=4ECi6WJpbzE</a>
 
 ---
 
@@ -48,7 +48,7 @@ It's funny how often women need to cajoled.
 
 ---
 
-https://www.youtube.com/watch?v=bYkl3XlEneA
+<a href="https://www.youtube.com/watch?v=bYkl3XlEneA" target="_blank">https://www.youtube.com/watch?v=bYkl3XlEneA</a>
 
 ---
 
@@ -58,8 +58,8 @@ Communism & Capitalism were experiments by the elites to control the people.
 
 To understand something is to be liberated from it.
 
-https://www.youtube.com/watch?v=5fbvquHSPJU
+<a href="https://www.youtube.com/watch?v=5fbvquHSPJU" target="_blank">https://www.youtube.com/watch?v=5fbvquHSPJU</a>
 
 ---
 
-https://www.youtube.com/watch?v=XcGh1Dex4Yo
+<a href="https://www.youtube.com/watch?v=XcGh1Dex4Yo" target="_blank">https://www.youtube.com/watch?v=XcGh1Dex4Yo</a>
