--- a/notes/20150206.md
+++ b/notes/20150206.md
@@ -1,6 +1,6 @@
-http://nautil.us/issue/20/creativity/the-strange-inevitability-of-evolution?utm_source=RSS_Feed&utm_medium=RSS&utm_campaign=RSS_Syndication
+<a href="http://nautil.us/issue/20/creativity/the-strange-inevitability-of-evolution?utm_source=RSS_Feed&utm_medium=RSS&utm_campaign=RSS_Syndication" target="_blank">http://nautil.us/issue/20/creativity/the-strange-inevitability-of-evolution?utm_source=RSS_Feed&utm_medium=RSS&utm_campaign=RSS_Syndication</a>
 
-http://www.elephantjournal.com/2013/11/the-best-advice-i-ever-got-about-love/
+<a href="http://www.elephantjournal.com/2013/11/the-best-advice-i-ever-got-about-love/" target="_blank">http://www.elephantjournal.com/2013/11/the-best-advice-i-ever-got-about-love/</a>
 
 ---
 
@@ -10,6 +10,6 @@ Epiphenomena
 
 ---
 
-https://www.youtube.com/watch?annotation_id=annotation_600496&feature=iv&src_vid=mL5MM4-omks&v=LuPs67d6qZM
+<a href="https://www.youtube.com/watch?annotation_id=annotation_600496&feature=iv&src_vid=mL5MM4-omks&v=LuPs67d6qZM" target="_blank">https://www.youtube.com/watch?annotation_id=annotation_600496&feature=iv&src_vid=mL5MM4-omks&v=LuPs67d6qZM</a>
 
-https://www.youtube.com/watch?v=iakVCvPzcvI
+<a href="https://www.youtube.com/watch?v=iakVCvPzcvI" target="_blank">https://www.youtube.com/watch?v=iakVCvPzcvI</a>
