--- a/notes/20150207.md
+++ b/notes/20150207.md
@@ -6,4 +6,4 @@ If, 30 years ago, I told you the world will have the issues it has today, you wo
 
 ---
 
-https://www.youtube.com/watch?v=1T-62uxbMBM
+<a href="https://www.youtube.com/watch?v=1T-62uxbMBM" target="_blank">https://www.youtube.com/watch?v=1T-62uxbMBM</a>
