--- a/notes/20150214.md
+++ b/notes/20150214.md
@@ -1,4 +1,4 @@
-https://www.youtube.com/watch?v=NwztaQgv3-Y
+<a href="https://www.youtube.com/watch?v=NwztaQgv3-Y" target="_blank">https://www.youtube.com/watch?v=NwztaQgv3-Y</a>
 
 ---
 
