--- a/notes/20150217.md
+++ b/notes/20150217.md
@@ -1,4 +1,4 @@
-http://www.elephantjournal.com/2014/06/how-to-love-an-artist/
+<a href="http://www.elephantjournal.com/2014/06/how-to-love-an-artist/" target="_blank">http://www.elephantjournal.com/2014/06/how-to-love-an-artist/</a>
 
 ---
 
