--- a/notes/20150218.md
+++ b/notes/20150218.md
@@ -6,8 +6,8 @@ Mono Poly
 Single-Many
 Single over Many (control, governance)
 Single to Many (distribution)
-http://en.wiktionary.org/wiki/mono-
-http://en.wiktionary.org/wiki/poly-
+<a href="http://en.wiktionary.org/wiki/mono-" target="_blank">http://en.wiktionary.org/wiki/mono-</a>
+<a href="http://en.wiktionary.org/wiki/poly-" target="_blank">http://en.wiktionary.org/wiki/poly-</a>
 
 ---
 
