--- a/notes/20150219.md
+++ b/notes/20150219.md
@@ -18,7 +18,7 @@ The buck stops here.
 
 I take responsibility for my actions.
 
-http://en.wikipedia.org/wiki/Buck_passing
+<a href="http://en.wikipedia.org/wiki/Buck_passing" target="_blank">http://en.wikipedia.org/wiki/Buck_passing</a>
 
 ---
 
