--- a/notes/20150222.md
+++ b/notes/20150222.md
@@ -1,6 +1,6 @@
 Single electron universe.
 
-http://en.wikipedia.org/wiki/One-electron_universe
+<a href="http://en.wikipedia.org/wiki/One-electron_universe" target="_blank">http://en.wikipedia.org/wiki/One-electron_universe</a>
 
 Alan Watts we are everybody.
 
