--- a/notes/20150228.md
+++ b/notes/20150228.md
@@ -21,7 +21,7 @@ Conservative, Liberals. What do they have in common? Hypocrisy.
 The Climate Near the Ground
 -- Rudolf Geiger
 
-https://archive.org/details/climatenearthegr032657mbp
+<a href="https://archive.org/details/climatenearthegr032657mbp" target="_blank">https://archive.org/details/climatenearthegr032657mbp</a>
 
 ---
 
@@ -55,4 +55,4 @@ Decisions are best made through personal action.
 
 ---
 
-https://en.wikipedia.org/wiki/Anthroposophy
+<a href="https://en.wikipedia.org/wiki/Anthroposophy" target="_blank">https://en.wikipedia.org/wiki/Anthroposophy</a>
