--- a/notes/20150301.md
+++ b/notes/20150301.md
@@ -1,4 +1,4 @@
-http://www.permaculture.co.uk/readers-solutions/how-make-hot-compost
+<a href="http://www.permaculture.co.uk/readers-solutions/how-make-hot-compost" target="_blank">http://www.permaculture.co.uk/readers-solutions/how-make-hot-compost</a>
 
 Compost Piles can heat up water.
 
@@ -6,11 +6,11 @@ Spirulina tanks.
 
 ---
 
-http://www.elephantjournal.com/2011/12/six-ways-to-show-your-love/
+<a href="http://www.elephantjournal.com/2011/12/six-ways-to-show-your-love/" target="_blank">http://www.elephantjournal.com/2011/12/six-ways-to-show-your-love/</a>
 
 ---
 
-https://www.regenerative.com/ebook/permaculture.pdf
+<a href="https://www.regenerative.com/ebook/permaculture.pdf" target="_blank">https://www.regenerative.com/ebook/permaculture.pdf</a>
 
 # Patterns
 
@@ -63,4 +63,4 @@ If I have something to say, I will shout it from the rooftops.
 
 ---
 
-https://www.youtube.com/watch?v=SfAbYlFqut4
+<a href="https://www.youtube.com/watch?v=SfAbYlFqut4" target="_blank">https://www.youtube.com/watch?v=SfAbYlFqut4</a>
