--- a/notes/20150303.md
+++ b/notes/20150303.md
@@ -6,4 +6,4 @@ Feeling specific situations clears the mind of the specifics. Instead, specifics
 
 ---
 
-https://en.wiktionary.org/wiki/jingoism
+<a href="https://en.wiktionary.org/wiki/jingoism" target="_blank">https://en.wiktionary.org/wiki/jingoism</a>
