--- a/notes/20150308.md
+++ b/notes/20150308.md
@@ -1,12 +1,12 @@
-https://www.youtube.com/watch?v=Ft0ylk4sU5M
+<a href="https://www.youtube.com/watch?v=Ft0ylk4sU5M" target="_blank">https://www.youtube.com/watch?v=Ft0ylk4sU5M</a>
 
-https://www.youtube.com/watch?v=rhATikyzLOo
+<a href="https://www.youtube.com/watch?v=rhATikyzLOo" target="_blank">https://www.youtube.com/watch?v=rhATikyzLOo</a>
 
-https://www.youtube.com/watch?v=keQUqRg2qZ0
+<a href="https://www.youtube.com/watch?v=keQUqRg2qZ0" target="_blank">https://www.youtube.com/watch?v=keQUqRg2qZ0</a>
 
-https://www.youtube.com/watch?v=4hF2QL0D5ww
+<a href="https://www.youtube.com/watch?v=4hF2QL0D5ww" target="_blank">https://www.youtube.com/watch?v=4hF2QL0D5ww</a>
 
-https://www.youtube.com/watch?v=AeTQtzkpLQQ
+<a href="https://www.youtube.com/watch?v=AeTQtzkpLQQ" target="_blank">https://www.youtube.com/watch?v=AeTQtzkpLQQ</a>
 
 ---
 
