--- a/notes/20150317.md
+++ b/notes/20150317.md
@@ -1,8 +1,8 @@
-http://www.elephantjournal.com/2014/09/the-beauty-in-goodbye/
+<a href="http://www.elephantjournal.com/2014/09/the-beauty-in-goodbye/" target="_blank">http://www.elephantjournal.com/2014/09/the-beauty-in-goodbye/</a>
 
-http://the-mouse-trap.blogspot.com/2006/12/schizophrenia-religion-autism-and.html
+<a href="http://the-mouse-trap.blogspot.com/2006/12/schizophrenia-religion-autism-and.html" target="_blank">http://the-mouse-trap.blogspot.com/2006/12/schizophrenia-religion-autism-and.html</a>
 
-http://www.unc.edu/depts/diplomat/item/2009/0103/comm/kerbel_uschina.html
+<a href="http://www.unc.edu/depts/diplomat/item/2009/0103/comm/kerbel_uschina.html" target="_blank">http://www.unc.edu/depts/diplomat/item/2009/0103/comm/kerbel_uschina.html</a>
 
 ---
 
@@ -12,47 +12,47 @@ It was a pleasure meeting you this past weekend.
 At the bottom of this message, I've included a flyer for the water harvesting intensive I mentioned I'd be teaching in southern Quebec May 1-6.  Please share it widely
 
 As promised, here's the dropbox link for the slide shows I shared
-https://www.dropbox.com/sh/6pgd9vzc3b0i3hc/AABWJINDPwW82JXDkcTfTL-Va?dl=0
+<a href="https://www.dropbox.com/sh/6pgd9vzc3b0i3hc/AABWJINDPwW82JXDkcTfTL-Va?dl=0" target="_blank">https://www.dropbox.com/sh/6pgd9vzc3b0i3hc/AABWJINDPwW82JXDkcTfTL-Va?dl=0</a>
 
 Here's my on-line design portfolio.  You may find these examples helpful as you begin your own designs.
-http://portfolios.gaiauniversity.org/view/view.php?id=3428
+<a href="http://portfolios.gaiauniversity.org/view/view.php?id=3428" target="_blank">http://portfolios.gaiauniversity.org/view/view.php?id=3428</a>
 
 
 And here are some on-line design tools I find invaluable in my work..
 
 Find climate data for a site
-http://cdo.ncdc.noaa.gov/cgi-bin/climatenormals/climatenormals.pl?directive=prod_select2&prodtype=CLIM20&subrnum=
+<a href="http://cdo.ncdc.noaa.gov/cgi-bin/climatenormals/climatenormals.pl?directive=prod_select2&prodtype=CLIM20&subrnum=" target="_blank">http://cdo.ncdc.noaa.gov/cgi-bin/climatenormals/climatenormals.pl?directive=prod_select2&prodtype=CLIM20&subrnum=</a>
 
 Calculate Solar Positioning and Microclimatic Details
-http://www.esrl.noaa.gov/gmd/grad/solcalc/
+<a href="http://www.esrl.noaa.gov/gmd/grad/solcalc/" target="_blank">http://www.esrl.noaa.gov/gmd/grad/solcalc/</a>
 
 Magnetic Declination Calculator
-http://www.ngdc.noaa.gov/geomagmodels/Declination.jsp
+<a href="http://www.ngdc.noaa.gov/geomagmodels/Declination.jsp" target="_blank">http://www.ngdc.noaa.gov/geomagmodels/Declination.jsp</a>
 
 Web Soil Survey - find soil data for a site
-http://websoilsurvey.nrcs.usda.gov/app/WebSoilSurvey.aspx
+<a href="http://websoilsurvey.nrcs.usda.gov/app/WebSoilSurvey.aspx" target="_blank">http://websoilsurvey.nrcs.usda.gov/app/WebSoilSurvey.aspx</a>
 and Soil Web
-http://casoilresource.lawr.ucdavis.edu/gmap/
+<a href="http://casoilresource.lawr.ucdavis.edu/gmap/" target="_blank">http://casoilresource.lawr.ucdavis.edu/gmap/</a>
 
 Hardiness zones and plant maps for your zip code
-http://www.plantmaps.com/
+<a href="http://www.plantmaps.com/" target="_blank">http://www.plantmaps.com/</a>
 
 Planimeter - Measure the area of a piece of land 
-http://acme.com/planimeter/
+<a href="http://acme.com/planimeter/" target="_blank">http://acme.com/planimeter/</a>
 
 FEMA Flood Maps
-https://hazards.fema.gov/wps/portal/mapviewer
+<a href="https://hazards.fema.gov/wps/portal/mapviewer" target="_blank">https://hazards.fema.gov/wps/portal/mapviewer</a>
 
 and plant databases....
 
 Plants for a Future on-line useful plant database
-http://pfaf.org/user/default.aspx
+<a href="http://pfaf.org/user/default.aspx" target="_blank">http://pfaf.org/user/default.aspx</a>
 
-http://www.natureserve.org/explorer/servlet/NatureServe?init=Ecol
+<a href="http://www.natureserve.org/explorer/servlet/NatureServe?init=Ecol" target="_blank">http://www.natureserve.org/explorer/servlet/NatureServe?init=Ecol</a>
 An ecological communities database
 
 The US Forest Service Fire Effects Information Service
-http://www.fs.fed.us/database/feis/
+<a href="http://www.fs.fed.us/database/feis/" target="_blank">http://www.fs.fed.us/database/feis/</a>
 
 
 and finally - iPhone apps
