--- a/notes/20150320.md
+++ b/notes/20150320.md
@@ -5,36 +5,36 @@ Accident
 
 ---
 
-http://www.grameen-info.org/?option=com_content&task=blogcategory&id=54&Itemid=206
+<a href="http://www.grameen-info.org/?option=com_content&task=blogcategory&id=54&Itemid=206" target="_blank">http://www.grameen-info.org/?option=com_content&task=blogcategory&id=54&Itemid=206</a>
 
-http://www.kiva.org/
+<a href="http://www.kiva.org/" target="_blank">http://www.kiva.org/</a>
 
-https://en.wikipedia.org/wiki/Parental_leave
+<a href="https://en.wikipedia.org/wiki/Parental_leave" target="_blank">https://en.wikipedia.org/wiki/Parental_leave</a>
 
-http://content.time.com/time/business/article/0,8599,1947313,00.html
+<a href="http://content.time.com/time/business/article/0,8599,1947313,00.html" target="_blank">http://content.time.com/time/business/article/0,8599,1947313,00.html</a>
 
-http://natcapsolutions.org/
+<a href="http://natcapsolutions.org/" target="_blank">http://natcapsolutions.org/</a>
 
-http://www.greenandsave.com/green_news/green-blog/sustainable-business-network-greater-philadelphia-launches-its-new-brand-6829
+<a href="http://www.greenandsave.com/green_news/green-blog/sustainable-business-network-greater-philadelphia-launches-its-new-brand-6829" target="_blank">http://www.greenandsave.com/green_news/green-blog/sustainable-business-network-greater-philadelphia-launches-its-new-brand-6829</a>
 
-http://www.geonewsletter.org/node/410
+<a href="http://www.geonewsletter.org/node/410" target="_blank">http://www.geonewsletter.org/node/410</a>
 
-http://arizmendi.coop/resources
+<a href="http://arizmendi.coop/resources" target="_blank">http://arizmendi.coop/resources</a>
 
-http://www.intervale.org/
+<a href="http://www.intervale.org/" target="_blank">http://www.intervale.org/</a>
 
 Vermont Compost
 
-https://www.youtube.com/watch?v=GN5GGF4g0hk
+<a href="https://www.youtube.com/watch?v=GN5GGF4g0hk" target="_blank">https://www.youtube.com/watch?v=GN5GGF4g0hk</a>
 
-http://power.eecs.berkeley.edu/publications/he_design_stirling_engine.pdf
+<a href="http://power.eecs.berkeley.edu/publications/he_design_stirling_engine.pdf" target="_blank">http://power.eecs.berkeley.edu/publications/he_design_stirling_engine.pdf</a>
 
-http://superblinky.com/a-compost-powered-car/
+<a href="http://superblinky.com/a-compost-powered-car/" target="_blank">http://superblinky.com/a-compost-powered-car/</a>
 
-http://www.permies.com/t/11670/energy/pressure-high-volume-solar-engine
+<a href="http://www.permies.com/t/11670/energy/pressure-high-volume-solar-engine" target="_blank">http://www.permies.com/t/11670/energy/pressure-high-volume-solar-engine</a>
 
-http://www.mb-soft.com/public3/electzzz.html
+<a href="http://www.mb-soft.com/public3/electzzz.html" target="_blank">http://www.mb-soft.com/public3/electzzz.html</a>
 
-https://www.youtube.com/watch?v=9yPjoh9YJMk&feature=youtu.be
+<a href="https://www.youtube.com/watch?v=9yPjoh9YJMk&feature=youtu.be" target="_blank">https://www.youtube.com/watch?v=9yPjoh9YJMk&feature=youtu.be</a>
 
 "In Nature's economy the currency is not money, it is life"
