--- a/notes/20150324.md
+++ b/notes/20150324.md
@@ -1,4 +1,4 @@
-https://www.youtube.com/watch?v=o268qbb_0BM&feature=youtu.be
+<a href="https://www.youtube.com/watch?v=o268qbb_0BM&feature=youtu.be" target="_blank">https://www.youtube.com/watch?v=o268qbb_0BM&feature=youtu.be</a>
 
 Dictionary of Perpetual Sorrows
 
