--- a/notes/20150331.md
+++ b/notes/20150331.md
@@ -1,2 +1,2 @@
-http://www.elephantjournal.com/2015/03/how-to-handle-passive-aggressive-people/
+<a href="http://www.elephantjournal.com/2015/03/how-to-handle-passive-aggressive-people/" target="_blank">http://www.elephantjournal.com/2015/03/how-to-handle-passive-aggressive-people/</a>
 
