--- a/notes/20150401.md
+++ b/notes/20150401.md
@@ -1,23 +1,23 @@
-http://www.elephantjournal.com/2015/01/5-steps-to-releasing-guilt-pain-surrounding-abuse/
+<a href="http://www.elephantjournal.com/2015/01/5-steps-to-releasing-guilt-pain-surrounding-abuse/" target="_blank">http://www.elephantjournal.com/2015/01/5-steps-to-releasing-guilt-pain-surrounding-abuse/</a>
 
-http://www.elephantjournal.com/2015/03/saudade-the-love-that-remains/
+<a href="http://www.elephantjournal.com/2015/03/saudade-the-love-that-remains/" target="_blank">http://www.elephantjournal.com/2015/03/saudade-the-love-that-remains/</a>
 
-http://thespiritscience.net/2015/03/29/how-your-own-mind-can-manipulate-you/
+<a href="http://thespiritscience.net/2015/03/29/how-your-own-mind-can-manipulate-you/" target="_blank">http://thespiritscience.net/2015/03/29/how-your-own-mind-can-manipulate-you/</a>
 
-http://thespiritscience.net/2014/07/21/30-traits-of-an-empath-how-to-know-if-youre-an-empath/
+<a href="http://thespiritscience.net/2014/07/21/30-traits-of-an-empath-how-to-know-if-youre-an-empath/" target="_blank">http://thespiritscience.net/2014/07/21/30-traits-of-an-empath-how-to-know-if-youre-an-empath/</a>
 
-http://www.elephantjournal.com/2014/12/30-important-questions-to-ask-before-we-commit-to-a-relationship/
+<a href="http://www.elephantjournal.com/2014/12/30-important-questions-to-ask-before-we-commit-to-a-relationship/" target="_blank">http://www.elephantjournal.com/2014/12/30-important-questions-to-ask-before-we-commit-to-a-relationship/</a>
 
-http://www.elephantjournal.com/2014/12/44-reasons-why-i-love-you/
+<a href="http://www.elephantjournal.com/2014/12/44-reasons-why-i-love-you/" target="_blank">http://www.elephantjournal.com/2014/12/44-reasons-why-i-love-you/</a>
 
-http://www.elephantjournal.com/2013/08/when-i-say-i-love-you-this-is-what-i-mean/
+<a href="http://www.elephantjournal.com/2013/08/when-i-say-i-love-you-this-is-what-i-mean/" target="_blank">http://www.elephantjournal.com/2013/08/when-i-say-i-love-you-this-is-what-i-mean/</a>
 
-http://fractalenlightenment.com/34211/spirituality/has-spirituality-become-part-of-your-ego
+<a href="http://fractalenlightenment.com/34211/spirituality/has-spirituality-become-part-of-your-ego" target="_blank">http://fractalenlightenment.com/34211/spirituality/has-spirituality-become-part-of-your-ego</a>
 
-http://www.permaculture.co.uk/book-reviews/ecozoa
+<a href="http://www.permaculture.co.uk/book-reviews/ecozoa" target="_blank">http://www.permaculture.co.uk/book-reviews/ecozoa</a>
 
-http://viewer.nationalmap.gov/viewer/
+<a href="http://viewer.nationalmap.gov/viewer/" target="_blank">http://viewer.nationalmap.gov/viewer/</a>
 
-http://gasanature.com/tree-apartment/
+<a href="http://gasanature.com/tree-apartment/" target="_blank">http://gasanature.com/tree-apartment/</a>
 
-http://www.elephantjournal.com/2013/11/these-kinds-of-relationships-have-an-expiration-date-caitlin-hatch/
+<a href="http://www.elephantjournal.com/2013/11/these-kinds-of-relationships-have-an-expiration-date-caitlin-hatch/" target="_blank">http://www.elephantjournal.com/2013/11/these-kinds-of-relationships-have-an-expiration-date-caitlin-hatch/</a>
