--- a/notes/20150402.md
+++ b/notes/20150402.md
@@ -1,3 +1,3 @@
-http://www.elephantjournal.com/2015/04/the-one-buddhist-red-flag-to-watch-out-for-how-youll-know-if-he-or-she-is-the-one/
+<a href="http://www.elephantjournal.com/2015/04/the-one-buddhist-red-flag-to-watch-out-for-how-youll-know-if-he-or-she-is-the-one/" target="_blank">http://www.elephantjournal.com/2015/04/the-one-buddhist-red-flag-to-watch-out-for-how-youll-know-if-he-or-she-is-the-one/</a>
 
-http://www.elephantjournal.com/2013/06/5-ways-to-be-independent-while-maintaining-a-strong-relationship/
+<a href="http://www.elephantjournal.com/2013/06/5-ways-to-be-independent-while-maintaining-a-strong-relationship/" target="_blank">http://www.elephantjournal.com/2013/06/5-ways-to-be-independent-while-maintaining-a-strong-relationship/</a>
