--- a/notes/20150404.md
+++ b/notes/20150404.md
@@ -1,5 +1,5 @@
-http://www.elephantjournal.com/2015/03/play-with-me/
+<a href="http://www.elephantjournal.com/2015/03/play-with-me/" target="_blank">http://www.elephantjournal.com/2015/03/play-with-me/</a>
 
-http://www.elephantjournal.com/2014/12/becoming-spiritual-a-story-of-kundalini-awakening/
+<a href="http://www.elephantjournal.com/2014/12/becoming-spiritual-a-story-of-kundalini-awakening/" target="_blank">http://www.elephantjournal.com/2014/12/becoming-spiritual-a-story-of-kundalini-awakening/</a>
 
-http://www.elephantjournal.com/2013/05/the-bravest-sexiest-thing-you-can-do-in-an-uncomfortable-moment-garrison-cohe/
+<a href="http://www.elephantjournal.com/2013/05/the-bravest-sexiest-thing-you-can-do-in-an-uncomfortable-moment-garrison-cohe/" target="_blank">http://www.elephantjournal.com/2013/05/the-bravest-sexiest-thing-you-can-do-in-an-uncomfortable-moment-garrison-cohe/</a>
