--- a/notes/20150405.md
+++ b/notes/20150405.md
@@ -1,6 +1,6 @@
 Some notes on terminology. I've been mentioning *Distributed Systems*. Distributed systems use centralized & decentralized patterns. Centralization & Decentralization are vectors or directions that we can take the system in. Also note that we are speaking of models that we create to describe how things work now, in the past, & in the future.
 
-http://en.wikipedia.org/wiki/Distributed_computing
+<a href="http://en.wikipedia.org/wiki/Distributed_computing" target="_blank">http://en.wikipedia.org/wiki/Distributed_computing</a>
 
 Centralization is effective at organizing knowledge & bureaucratic top-down control. Centralized repositories of information make the information easier to find. A major disadvantage of Centralized control systems is the complexity increases at a geometric or exponential rate. This means the costs & overhead rapidly increase with complexity. That is why Centralized big ag must remain simple. It scales in distribution but cannot scale in complexity.
 
@@ -22,17 +22,17 @@ Some things that are effectively centralized are information (i.e. the internet)
 
 ---
 
-http://www.elephantjournal.com/2015/04/yoni-massage/
+<a href="http://www.elephantjournal.com/2015/04/yoni-massage/" target="_blank">http://www.elephantjournal.com/2015/04/yoni-massage/</a>
 
-http://www.elephantjournal.com/2013/04/forget-coffee-start-your-mornings-with-explosive-sexual-healing-adult-candice-holdorf/
+<a href="http://www.elephantjournal.com/2013/04/forget-coffee-start-your-mornings-with-explosive-sexual-healing-adult-candice-holdorf/" target="_blank">http://www.elephantjournal.com/2013/04/forget-coffee-start-your-mornings-with-explosive-sexual-healing-adult-candice-holdorf/</a>
 
-http://www.elephantjournal.com/2014/03/the-other-g-spot-adult/
+<a href="http://www.elephantjournal.com/2014/03/the-other-g-spot-adult/" target="_blank">http://www.elephantjournal.com/2014/03/the-other-g-spot-adult/</a>
 
-http://www.elephantjournal.com/2014/12/becoming-spiritual-a-story-of-kundalini-awakening/
+<a href="http://www.elephantjournal.com/2014/12/becoming-spiritual-a-story-of-kundalini-awakening/" target="_blank">http://www.elephantjournal.com/2014/12/becoming-spiritual-a-story-of-kundalini-awakening/</a>
 
-https://theovernight.donordrive.com/index.cfm?fuseaction=donate.participant&participantID=14867
+<a href="https://theovernight.donordrive.com/index.cfm?fuseaction=donate.participant&participantID=14867" target="_blank">https://theovernight.donordrive.com/index.cfm?fuseaction=donate.participant&participantID=14867</a>
 
-https://www.youtube.com/watch?v=orklnRP7R84
+<a href="https://www.youtube.com/watch?v=orklnRP7R84" target="_blank">https://www.youtube.com/watch?v=orklnRP7R84</a>
 
 
-http://mytinysecrets.com/how-to-give-a-yoni-massage-12-crucial-steps-to-make-it-life-changing-for-her/
+<a href="http://mytinysecrets.com/how-to-give-a-yoni-massage-12-crucial-steps-to-make-it-life-changing-for-her/" target="_blank">http://mytinysecrets.com/how-to-give-a-yoni-massage-12-crucial-steps-to-make-it-life-changing-for-her/</a>
