--- a/notes/20150407.md
+++ b/notes/20150407.md
@@ -1,10 +1,10 @@
-http://mytinysecrets.com/how-to-give-a-yoni-massage-12-crucial-steps-to-make-it-life-changing-for-her/
+<a href="http://mytinysecrets.com/how-to-give-a-yoni-massage-12-crucial-steps-to-make-it-life-changing-for-her/" target="_blank">http://mytinysecrets.com/how-to-give-a-yoni-massage-12-crucial-steps-to-make-it-life-changing-for-her/</a>
 
-http://eroslife.co.za/
+<a href="http://eroslife.co.za/" target="_blank">http://eroslife.co.za/</a>
 
-http://www.elephantjournal.com/2014/10/10-ways-to-become-sexually-empowered-start-having-orgasms-like-you-mean-it/
+<a href="http://www.elephantjournal.com/2014/10/10-ways-to-become-sexually-empowered-start-having-orgasms-like-you-mean-it/" target="_blank">http://www.elephantjournal.com/2014/10/10-ways-to-become-sexually-empowered-start-having-orgasms-like-you-mean-it/</a>
 
-http://www.internationalherbsymposium.com/index.php?route=common/home
+<a href="http://www.internationalherbsymposium.com/index.php?route=common/home" target="_blank">http://www.internationalherbsymposium.com/index.php?route=common/home</a>
 
 ---
 
