--- a/notes/20150408.md
+++ b/notes/20150408.md
@@ -1,12 +1,12 @@
 The transitory nature of desire.
 
-http://www.elephantjournal.com/2014/10/the-quote-that-stopped-me-in-my-tracks-woke-me-up/
+<a href="http://www.elephantjournal.com/2014/10/the-quote-that-stopped-me-in-my-tracks-woke-me-up/" target="_blank">http://www.elephantjournal.com/2014/10/the-quote-that-stopped-me-in-my-tracks-woke-me-up/</a>
 
-http://www.elephantjournal.com/2014/01/are-you-codependent-take-the-quiz-emily-mccaffrey/
+<a href="http://www.elephantjournal.com/2014/01/are-you-codependent-take-the-quiz-emily-mccaffrey/" target="_blank">http://www.elephantjournal.com/2014/01/are-you-codependent-take-the-quiz-emily-mccaffrey/</a>
 
-http://thework.com/do-work
+<a href="http://thework.com/do-work" target="_blank">http://thework.com/do-work</a>
 
-http://coda.org/index.cfm/meeting-documents/patterns-and-characteristics-2011/
+<a href="http://coda.org/index.cfm/meeting-documents/patterns-and-characteristics-2011/" target="_blank">http://coda.org/index.cfm/meeting-documents/patterns-and-characteristics-2011/</a>
 
 ---
 
@@ -28,4 +28,4 @@ I'm being avoided after trying too hard.
 
 ---
 
-http://www.mindbodygreen.com/0-18209/how-to-attract-someone-who-actually-wants-intimacy.html
+<a href="http://www.mindbodygreen.com/0-18209/how-to-attract-someone-who-actually-wants-intimacy.html" target="_blank">http://www.mindbodygreen.com/0-18209/how-to-attract-someone-who-actually-wants-intimacy.html</a>
