--- a/notes/20150410.md
+++ b/notes/20150410.md
@@ -1,1 +1,1 @@
-http://www.collective-evolution.com/2014/03/18/this-study-will-make-you-think-twice-about-who-you-are-getting-into-bed-with/
+<a href="http://www.collective-evolution.com/2014/03/18/this-study-will-make-you-think-twice-about-who-you-are-getting-into-bed-with/" target="_blank">http://www.collective-evolution.com/2014/03/18/this-study-will-make-you-think-twice-about-who-you-are-getting-into-bed-with/</a>
