--- a/notes/20150420.md
+++ b/notes/20150420.md
@@ -1,4 +1,4 @@
-http://www.sigmaaldrich.com/technical-documents/articles/biology/interactive-metabolic-pathways-map.html
+<a href="http://www.sigmaaldrich.com/technical-documents/articles/biology/interactive-metabolic-pathways-map.html" target="_blank">http://www.sigmaaldrich.com/technical-documents/articles/biology/interactive-metabolic-pathways-map.html</a>
 
 Permaculture house space planning in an urban environment.
 
