--- a/notes/20150504.md
+++ b/notes/20150504.md
@@ -1,7 +1,7 @@
-https://www.youtube.com/watch?v=lTFugHA2WaI&feature=youtu.be
+<a href="https://www.youtube.com/watch?v=lTFugHA2WaI&feature=youtu.be" target="_blank">https://www.youtube.com/watch?v=lTFugHA2WaI&feature=youtu.be</a>
 
-http://www.elephantjournal.com/2012/10/7-1-reasons-not-to-fck-my-mind-nsfw/
+<a href="http://www.elephantjournal.com/2012/10/7-1-reasons-not-to-fck-my-mind-nsfw/" target="_blank">http://www.elephantjournal.com/2012/10/7-1-reasons-not-to-fck-my-mind-nsfw/</a>
 
-http://www.elephantjournal.com/2014/04/why-we-need-to-face-rock-bottom-alone-freya-watson/
+<a href="http://www.elephantjournal.com/2014/04/why-we-need-to-face-rock-bottom-alone-freya-watson/" target="_blank">http://www.elephantjournal.com/2014/04/why-we-need-to-face-rock-bottom-alone-freya-watson/</a>
 
-http://shop.modernfarmer.com/shop/apparel/limited-edition-modern-farmer-muck-boots/
+<a href="http://shop.modernfarmer.com/shop/apparel/limited-edition-modern-farmer-muck-boots/" target="_blank">http://shop.modernfarmer.com/shop/apparel/limited-edition-modern-farmer-muck-boots/</a>
