--- a/notes/20150515.md
+++ b/notes/20150515.md
@@ -1,13 +1,13 @@
-http://www.elephantjournal.com/2014/06/the-truth-about-marriage-monogamy-long-term-partnership/
+<a href="http://www.elephantjournal.com/2014/06/the-truth-about-marriage-monogamy-long-term-partnership/" target="_blank">http://www.elephantjournal.com/2014/06/the-truth-about-marriage-monogamy-long-term-partnership/</a>
 
-http://www.elephantjournal.com/2015/05/will-you-marry-me-one-day/
+<a href="http://www.elephantjournal.com/2015/05/will-you-marry-me-one-day/" target="_blank">http://www.elephantjournal.com/2015/05/will-you-marry-me-one-day/</a>
 
-http://www.elephantjournal.com/2013/08/relationship-intelligence-the-key-to-picking-a-life-partner-mark-wolynn/
+<a href="http://www.elephantjournal.com/2013/08/relationship-intelligence-the-key-to-picking-a-life-partner-mark-wolynn/" target="_blank">http://www.elephantjournal.com/2013/08/relationship-intelligence-the-key-to-picking-a-life-partner-mark-wolynn/</a>
 
-http://www.elephantjournal.com/2015/01/the-36-questions-that-offer-a-path-into-love/
+<a href="http://www.elephantjournal.com/2015/01/the-36-questions-that-offer-a-path-into-love/" target="_blank">http://www.elephantjournal.com/2015/01/the-36-questions-that-offer-a-path-into-love/</a>
 
-http://www.elephantjournal.com/2015/05/what-it-means-to-be-friends/
+<a href="http://www.elephantjournal.com/2015/05/what-it-means-to-be-friends/" target="_blank">http://www.elephantjournal.com/2015/05/what-it-means-to-be-friends/</a>
 
-http://www.elephantjournal.com/2015/01/the-36-questions-that-offer-a-path-into-love/
+<a href="http://www.elephantjournal.com/2015/01/the-36-questions-that-offer-a-path-into-love/" target="_blank">http://www.elephantjournal.com/2015/01/the-36-questions-that-offer-a-path-into-love/</a>
 
-http://goodmenproject.com/featured-content/five-ways-boys-become-men-m2w/
+<a href="http://goodmenproject.com/featured-content/five-ways-boys-become-men-m2w/" target="_blank">http://goodmenproject.com/featured-content/five-ways-boys-become-men-m2w/</a>
