--- a/notes/20150516.md
+++ b/notes/20150516.md
@@ -1,3 +1,3 @@
-http://www.elephantjournal.com/2014/02/3-signs-of-an-emotional-unavailable-person/
+<a href="http://www.elephantjournal.com/2014/02/3-signs-of-an-emotional-unavailable-person/" target="_blank">http://www.elephantjournal.com/2014/02/3-signs-of-an-emotional-unavailable-person/</a>
 
-http://www.elephantjournal.com/2015/05/reclaim-your-power-with-this-one-simple-question/
+<a href="http://www.elephantjournal.com/2015/05/reclaim-your-power-with-this-one-simple-question/" target="_blank">http://www.elephantjournal.com/2015/05/reclaim-your-power-with-this-one-simple-question/</a>
