--- a/notes/20150521.md
+++ b/notes/20150521.md
@@ -1,3 +1,3 @@
-http://www.elephantjournal.com/2014/12/a-mantra-to-repeat-when-were-jealous/
+<a href="http://www.elephantjournal.com/2014/12/a-mantra-to-repeat-when-were-jealous/" target="_blank">http://www.elephantjournal.com/2014/12/a-mantra-to-repeat-when-were-jealous/</a>
 
-http://www.elephantjournal.com/2013/09/5-ways-to-make-a-man-feel-really-loved-damien-bohler/
+<a href="http://www.elephantjournal.com/2013/09/5-ways-to-make-a-man-feel-really-loved-damien-bohler/" target="_blank">http://www.elephantjournal.com/2013/09/5-ways-to-make-a-man-feel-really-loved-damien-bohler/</a>
