--- a/notes/20150523.md
+++ b/notes/20150523.md
@@ -20,7 +20,7 @@ Disturbances destroy the complexity so
 
 ---
 
-http://goodmenproject.com/featured-content/the-power-of-pain-the-secret-to-everlasting-love-slake/
+<a href="http://goodmenproject.com/featured-content/the-power-of-pain-the-secret-to-everlasting-love-slake/" target="_blank">http://goodmenproject.com/featured-content/the-power-of-pain-the-secret-to-everlasting-love-slake/</a>
 
 ---
 
@@ -30,8 +30,8 @@ We are bred to be religious. Even in our rebellion against religion, we are stil
 
 ---
 
-http://www.elephantjournal.com/2014/12/10-ways-to-master-the-art-of-talking-dirty-adult/
+<a href="http://www.elephantjournal.com/2014/12/10-ways-to-master-the-art-of-talking-dirty-adult/" target="_blank">http://www.elephantjournal.com/2014/12/10-ways-to-master-the-art-of-talking-dirty-adult/</a>
 
-http://www.elephantjournal.com/2015/04/how-to-find-your-chakra-mate/
+<a href="http://www.elephantjournal.com/2015/04/how-to-find-your-chakra-mate/" target="_blank">http://www.elephantjournal.com/2015/04/how-to-find-your-chakra-mate/</a>
 
-http://www.elephantjournal.com/2015/05/the-art-of-giving-an-orgasmic-yoni-vaginal-massage
+<a href="http://www.elephantjournal.com/2015/05/the-art-of-giving-an-orgasmic-yoni-vaginal-massage" target="_blank">http://www.elephantjournal.com/2015/05/the-art-of-giving-an-orgasmic-yoni-vaginal-massage</a>
