--- a/notes/20150527.md
+++ b/notes/20150527.md
@@ -1,10 +1,10 @@
-http://www.elephantjournal.com/2014/11/i-had-to-be-broken-so-i-could-meet-you/
+<a href="http://www.elephantjournal.com/2014/11/i-had-to-be-broken-so-i-could-meet-you/" target="_blank">http://www.elephantjournal.com/2014/11/i-had-to-be-broken-so-i-could-meet-you/</a>
 
-http://www.elephantjournal.com/2014/02/the-one-thing-we-need-to-have-a-healthy-relationship/
+<a href="http://www.elephantjournal.com/2014/02/the-one-thing-we-need-to-have-a-healthy-relationship/" target="_blank">http://www.elephantjournal.com/2014/02/the-one-thing-we-need-to-have-a-healthy-relationship/</a>
 
-http://www.elephantjournal.com/2015/05/the-warriors-path-through-fear/
+<a href="http://www.elephantjournal.com/2015/05/the-warriors-path-through-fear/" target="_blank">http://www.elephantjournal.com/2015/05/the-warriors-path-through-fear/</a>
 
-http://www.elephantjournal.com/2015/05/before-you-throw-away-your-relationship-read-this/
+<a href="http://www.elephantjournal.com/2015/05/before-you-throw-away-your-relationship-read-this/" target="_blank">http://www.elephantjournal.com/2015/05/before-you-throw-away-your-relationship-read-this/</a>
 
 ---
 
