--- a/notes/20150601.md
+++ b/notes/20150601.md
@@ -6,9 +6,9 @@ I'm looking forward to seeing you around soon.
 
 ---
 
-http://www.elephantjournal.com/2015/05/how-i-cured-my-adult-acne-naturally/
+<a href="http://www.elephantjournal.com/2015/05/how-i-cured-my-adult-acne-naturally/" target="_blank">http://www.elephantjournal.com/2015/05/how-i-cured-my-adult-acne-naturally/</a>
 
-http://www.elephantjournal.com/2014/10/3-sure-ways-to-avoid-happiness/
+<a href="http://www.elephantjournal.com/2014/10/3-sure-ways-to-avoid-happiness/" target="_blank">http://www.elephantjournal.com/2014/10/3-sure-ways-to-avoid-happiness/</a>
 
 ---
 
