--- a/notes/20150602.md
+++ b/notes/20150602.md
@@ -2,11 +2,11 @@ Virgins are celebrated in patriarchal societies with stable families?
 
 ---
 
-http://www.elephantjournal.com/2015/05/men-share-their-heart-what-makes-a-woman-most-beautiful/
+<a href="http://www.elephantjournal.com/2015/05/men-share-their-heart-what-makes-a-woman-most-beautiful/" target="_blank">http://www.elephantjournal.com/2015/05/men-share-their-heart-what-makes-a-woman-most-beautiful/</a>
 
-http://www.elephantjournal.com/2014/03/10-ways-to-take-care-of-ourselves-when-were-suffering-from-burn-out/
+<a href="http://www.elephantjournal.com/2014/03/10-ways-to-take-care-of-ourselves-when-were-suffering-from-burn-out/" target="_blank">http://www.elephantjournal.com/2014/03/10-ways-to-take-care-of-ourselves-when-were-suffering-from-burn-out/</a>
 
-http://www.elephantjournal.com/2014/10/a-broke-busy-girls-guide-to-superfoods/
+<a href="http://www.elephantjournal.com/2014/10/a-broke-busy-girls-guide-to-superfoods/" target="_blank">http://www.elephantjournal.com/2014/10/a-broke-busy-girls-guide-to-superfoods/</a>
 
 ---
 
