--- a/notes/20150603.md
+++ b/notes/20150603.md
@@ -1,13 +1,13 @@
-http://goodmenproject.com/featured-content/never-stop-fighting-to-make-it-work-kt/
+<a href="http://goodmenproject.com/featured-content/never-stop-fighting-to-make-it-work-kt/" target="_blank">http://goodmenproject.com/featured-content/never-stop-fighting-to-make-it-work-kt/</a>
 
-http://www.filmsforaction.org/articles/why-most-internet-activists-dont-change-any-minds/
+<a href="http://www.filmsforaction.org/articles/why-most-internet-activists-dont-change-any-minds/" target="_blank">http://www.filmsforaction.org/articles/why-most-internet-activists-dont-change-any-minds/</a>
 
-http://www.elephantjournal.com/2013/06/10-ways-to-fake-confidence-the-1-reason-why-you-should/
+<a href="http://www.elephantjournal.com/2013/06/10-ways-to-fake-confidence-the-1-reason-why-you-should/" target="_blank">http://www.elephantjournal.com/2013/06/10-ways-to-fake-confidence-the-1-reason-why-you-should/</a>
 
-http://www.elephantjournal.com/2014/05/how-do-we-know-if-we-love-someone-john-kim/
+<a href="http://www.elephantjournal.com/2014/05/how-do-we-know-if-we-love-someone-john-kim/" target="_blank">http://www.elephantjournal.com/2014/05/how-do-we-know-if-we-love-someone-john-kim/</a>
 
-http://www.elephantjournal.com/2015/06/anxiety-the-writer/
+<a href="http://www.elephantjournal.com/2015/06/anxiety-the-writer/" target="_blank">http://www.elephantjournal.com/2015/06/anxiety-the-writer/</a>
 
-http://www.elephantjournal.com/2014/01/the-most-harmful-stereotype-about-men-sex/
+<a href="http://www.elephantjournal.com/2014/01/the-most-harmful-stereotype-about-men-sex/" target="_blank">http://www.elephantjournal.com/2014/01/the-most-harmful-stereotype-about-men-sex/</a>
 
-http://goodmenproject.com/featured-content/kt-10-struggles-you-endure-as-a-hopeless-romantic-in-the-hook-up-culture/
+<a href="http://goodmenproject.com/featured-content/kt-10-struggles-you-endure-as-a-hopeless-romantic-in-the-hook-up-culture/" target="_blank">http://goodmenproject.com/featured-content/kt-10-struggles-you-endure-as-a-hopeless-romantic-in-the-hook-up-culture/</a>
