--- a/notes/20150605.md
+++ b/notes/20150605.md
@@ -1,63 +1,63 @@
-http://goodmenproject.com/featured-content/forgotten-childhood-traumas-wcz/
+<a href="http://goodmenproject.com/featured-content/forgotten-childhood-traumas-wcz/" target="_blank">http://goodmenproject.com/featured-content/forgotten-childhood-traumas-wcz/</a>
 
-http://goodmenproject.com/featured-content/3-struggles-guys-are-afraid-to-admit-kcon/
+<a href="http://goodmenproject.com/featured-content/3-struggles-guys-are-afraid-to-admit-kcon/" target="_blank">http://goodmenproject.com/featured-content/3-struggles-guys-are-afraid-to-admit-kcon/</a>
 
-http://www.filmsforaction.org/watch/anarchy-lives-rojava/
+<a href="http://www.filmsforaction.org/watch/anarchy-lives-rojava/" target="_blank">http://www.filmsforaction.org/watch/anarchy-lives-rojava/</a>
 
-http://www.filmsforaction.org/articles/5-habits-of-highly-compassionate-men/
+<a href="http://www.filmsforaction.org/articles/5-habits-of-highly-compassionate-men/" target="_blank">http://www.filmsforaction.org/articles/5-habits-of-highly-compassionate-men/</a>
 
-http://goodmenproject.com/featured-content/six-weird-double-standards-for-men-and-women-in-relationships-shesaid/
+<a href="http://goodmenproject.com/featured-content/six-weird-double-standards-for-men-and-women-in-relationships-shesaid/" target="_blank">http://goodmenproject.com/featured-content/six-weird-double-standards-for-men-and-women-in-relationships-shesaid/</a>
 
-http://www.elephantjournal.com/2014/02/why-sensitive-souls-need-rituals-kathryn-nulf/
+<a href="http://www.elephantjournal.com/2014/02/why-sensitive-souls-need-rituals-kathryn-nulf/" target="_blank">http://www.elephantjournal.com/2014/02/why-sensitive-souls-need-rituals-kathryn-nulf/</a>
 
-http://events.newschool.edu/event/mushrooms_for_people_and_planet_ancient_allies_for_modern_maladies#.VW5cZs5M2I0
+<a href="http://events.newschool.edu/event/mushrooms_for_people_and_planet_ancient_allies_for_modern_maladies#.VW5cZs5M2I0" target="_blank">http://events.newschool.edu/event/mushrooms_for_people_and_planet_ancient_allies_for_modern_maladies#.VW5cZs5M2I0</a>
 
-http://www.scarletamor.com/evolved-man/
+<a href="http://www.scarletamor.com/evolved-man/" target="_blank">http://www.scarletamor.com/evolved-man/</a>
 
-http://goodmenproject.com/featured-content/j1b-the-secret-to-great-sex/
+<a href="http://goodmenproject.com/featured-content/j1b-the-secret-to-great-sex/" target="_blank">http://goodmenproject.com/featured-content/j1b-the-secret-to-great-sex/</a>
 
-http://mindyourmind.ca/expression/blog/what-does-post-traumatic-stress-disorder-feel
+<a href="http://mindyourmind.ca/expression/blog/what-does-post-traumatic-stress-disorder-feel" target="_blank">http://mindyourmind.ca/expression/blog/what-does-post-traumatic-stress-disorder-feel</a>
 
-http://www.vox.com/2015/5/15/8612113/truth-climate-change
+<a href="http://www.vox.com/2015/5/15/8612113/truth-climate-change" target="_blank">http://www.vox.com/2015/5/15/8612113/truth-climate-change</a>
 
-http://www.elephantjournal.com/2014/07/5-books-i-wish-everyone-on-earth-would-read/
+<a href="http://www.elephantjournal.com/2014/07/5-books-i-wish-everyone-on-earth-would-read/" target="_blank">http://www.elephantjournal.com/2014/07/5-books-i-wish-everyone-on-earth-would-read/</a>
 
-http://www.elephantjournal.com/2015/02/kt-just-for-one-moment-let-me-hold-your-pain/
+<a href="http://www.elephantjournal.com/2015/02/kt-just-for-one-moment-let-me-hold-your-pain/" target="_blank">http://www.elephantjournal.com/2015/02/kt-just-for-one-moment-let-me-hold-your-pain/</a>
 
-http://www.elephantjournal.com/2013/09/the-truth-about-true-love/
+<a href="http://www.elephantjournal.com/2013/09/the-truth-about-true-love/" target="_blank">http://www.elephantjournal.com/2013/09/the-truth-about-true-love/</a>
 
-http://www.elephantjournal.com/2014/09/4-reasons-why-relationships-end/
+<a href="http://www.elephantjournal.com/2014/09/4-reasons-why-relationships-end/" target="_blank">http://www.elephantjournal.com/2014/09/4-reasons-why-relationships-end/</a>
 
-http://www.filmsforaction.org/articles/a-psychologist-explains-why-people-dont-give-a-shit-about-climate-change/
+<a href="http://www.filmsforaction.org/articles/a-psychologist-explains-why-people-dont-give-a-shit-about-climate-change/" target="_blank">http://www.filmsforaction.org/articles/a-psychologist-explains-why-people-dont-give-a-shit-about-climate-change/</a>
 
-http://goodmenproject.com/featured-content/seven-things-must-ending-long-term-relationship-wcz/
+<a href="http://goodmenproject.com/featured-content/seven-things-must-ending-long-term-relationship-wcz/" target="_blank">http://goodmenproject.com/featured-content/seven-things-must-ending-long-term-relationship-wcz/</a>
 
-http://www.elephantjournal.com/2015/05/let-go-of-what-you-want/
+<a href="http://www.elephantjournal.com/2015/05/let-go-of-what-you-want/" target="_blank">http://www.elephantjournal.com/2015/05/let-go-of-what-you-want/</a>
 
-http://www.elephantjournal.com/2013/12/what-having-an-affair-taught-me-cami-krueger/
+<a href="http://www.elephantjournal.com/2013/12/what-having-an-affair-taught-me-cami-krueger/" target="_blank">http://www.elephantjournal.com/2013/12/what-having-an-affair-taught-me-cami-krueger/</a>
 
-http://www.filmsforaction.org/news/10_reasons_that_green_people_are_happier/
+<a href="http://www.filmsforaction.org/news/10_reasons_that_green_people_are_happier/" target="_blank">http://www.filmsforaction.org/news/10_reasons_that_green_people_are_happier/</a>
 
-http://www.elephantjournal.com/2013/02/6-reasons-youre-just-not-feeling-the-love/
+<a href="http://www.elephantjournal.com/2013/02/6-reasons-youre-just-not-feeling-the-love/" target="_blank">http://www.elephantjournal.com/2013/02/6-reasons-youre-just-not-feeling-the-love/</a>
 
-http://www.onlyfun24.info/index.php/2015/06/02/treatment-of-native-americans-explored-in-documentary/
+<a href="http://www.onlyfun24.info/index.php/2015/06/02/treatment-of-native-americans-explored-in-documentary/" target="_blank">http://www.onlyfun24.info/index.php/2015/06/02/treatment-of-native-americans-explored-in-documentary/</a>
 
-http://www.filmsforaction.org/articles/the-new-macho-one-vision-of-what-mature-masculinity-looks-like/
+<a href="http://www.filmsforaction.org/articles/the-new-macho-one-vision-of-what-mature-masculinity-looks-like/" target="_blank">http://www.filmsforaction.org/articles/the-new-macho-one-vision-of-what-mature-masculinity-looks-like/</a>
 
-http://www.filmsforaction.org/articles/keep-calm-and-stay-revolutionary/
+<a href="http://www.filmsforaction.org/articles/keep-calm-and-stay-revolutionary/" target="_blank">http://www.filmsforaction.org/articles/keep-calm-and-stay-revolutionary/</a>
 
-http://www.filmsforaction.org/watch/democracy-needs-a-none-of-the-above-option-to-work-2014/
+<a href="http://www.filmsforaction.org/watch/democracy-needs-a-none-of-the-above-option-to-work-2014/" target="_blank">http://www.filmsforaction.org/watch/democracy-needs-a-none-of-the-above-option-to-work-2014/</a>
 
 ---
 
-http://www.ted.com/talks/brene_brown_on_vulnerability#t-1046085
+<a href="http://www.ted.com/talks/brene_brown_on_vulnerability#t-1046085" target="_blank">http://www.ted.com/talks/brene_brown_on_vulnerability#t-1046085</a>
 
 Blame - A way to discharge pain & discomfort
 
 ---
 
-http://www.elephantjournal.com/2015/03/5-ways-to-kick-start-our-self-esteem-recovery/
+<a href="http://www.elephantjournal.com/2015/03/5-ways-to-kick-start-our-self-esteem-recovery/" target="_blank">http://www.elephantjournal.com/2015/03/5-ways-to-kick-start-our-self-esteem-recovery/</a>
 
-http://www.rebellesociety.com/2015/06/10/leaving-home-to-walk-freely-on-your-own-path/
+<a href="http://www.rebellesociety.com/2015/06/10/leaving-home-to-walk-freely-on-your-own-path/" target="_blank">http://www.rebellesociety.com/2015/06/10/leaving-home-to-walk-freely-on-your-own-path/</a>
 
-http://www.elephantjournal.com/2015/06/what-our-orgasms-are-here-to-teach-us-adult/
+<a href="http://www.elephantjournal.com/2015/06/what-our-orgasms-are-here-to-teach-us-adult/" target="_blank">http://www.elephantjournal.com/2015/06/what-our-orgasms-are-here-to-teach-us-adult/</a>
