--- a/notes/20150608.md
+++ b/notes/20150608.md
@@ -1,39 +1,39 @@
-http://www.elephantjournal.com/2013/06/6-lazy-ways-to-get-happier-sexier-healthier-richer/
+<a href="http://www.elephantjournal.com/2013/06/6-lazy-ways-to-get-happier-sexier-healthier-richer/" target="_blank">http://www.elephantjournal.com/2013/06/6-lazy-ways-to-get-happier-sexier-healthier-richer/</a>
 
-http://www.elephantjournal.com/2015/04/she-was-done/
+<a href="http://www.elephantjournal.com/2015/04/she-was-done/" target="_blank">http://www.elephantjournal.com/2015/04/she-was-done/</a>
 
-http://www.elephantjournal.com/2013/05/soul-connection-the-deepest-kind-of-relationship/
+<a href="http://www.elephantjournal.com/2013/05/soul-connection-the-deepest-kind-of-relationship/" target="_blank">http://www.elephantjournal.com/2013/05/soul-connection-the-deepest-kind-of-relationship/</a>
 
-http://goodmenproject.com/featured-content/strategies-dont-lead-love-these-skills-do-jvinc/
+<a href="http://goodmenproject.com/featured-content/strategies-dont-lead-love-these-skills-do-jvinc/" target="_blank">http://goodmenproject.com/featured-content/strategies-dont-lead-love-these-skills-do-jvinc/</a>
 
-http://www.lifehack.org/articles/communication/this-how-you-become-unattractive-and-youre-not-aware.html?ref=fbp&n=2
+<a href="http://www.lifehack.org/articles/communication/this-how-you-become-unattractive-and-youre-not-aware.html?ref=fbp&n=2" target="_blank">http://www.lifehack.org/articles/communication/this-how-you-become-unattractive-and-youre-not-aware.html?ref=fbp&n=2</a>
 
-http://goodmenproject.com/featured-content/8-things-all-couples-can-do-to-fix-their-broken-relationship-hesaid/
+<a href="http://goodmenproject.com/featured-content/8-things-all-couples-can-do-to-fix-their-broken-relationship-hesaid/" target="_blank">http://goodmenproject.com/featured-content/8-things-all-couples-can-do-to-fix-their-broken-relationship-hesaid/</a>
 
-http://www.elephantjournal.com/2011/09/the-exquisite-lover-part-1/
+<a href="http://www.elephantjournal.com/2011/09/the-exquisite-lover-part-1/" target="_blank">http://www.elephantjournal.com/2011/09/the-exquisite-lover-part-1/</a>
 
-http://opensourceecology.org/open-source-ecology-afforestt-workshop/
+<a href="http://opensourceecology.org/open-source-ecology-afforestt-workshop/" target="_blank">http://opensourceecology.org/open-source-ecology-afforestt-workshop/</a>
 
-http://goodmenproject.com/featured-content/the-absolute-tragedy-of-watching-someone-fall-out-of-love-with-you-kt/
+<a href="http://goodmenproject.com/featured-content/the-absolute-tragedy-of-watching-someone-fall-out-of-love-with-you-kt/" target="_blank">http://goodmenproject.com/featured-content/the-absolute-tragedy-of-watching-someone-fall-out-of-love-with-you-kt/</a>
 
-http://ewebinars.com/webinar/?trackingID1=XXXXXXXX&trackingID2=YYYYYYYYY&landingpage=default&expiration=default&memberid=9912&webid=k3vr811gl6
+<a href="http://ewebinars.com/webinar/?trackingID1=XXXXXXXX&trackingID2=YYYYYYYYY&landingpage=default&expiration=default&memberid=9912&webid=k3vr811gl6" target="_blank">http://ewebinars.com/webinar/?trackingID1=XXXXXXXX&trackingID2=YYYYYYYYY&landingpage=default&expiration=default&memberid=9912&webid=k3vr811gl6</a>
 
-http://www.elephantjournal.com/2015/04/she-was-done/
+<a href="http://www.elephantjournal.com/2015/04/she-was-done/" target="_blank">http://www.elephantjournal.com/2015/04/she-was-done/</a>
 
-http://goodmenproject.com/featured-content/strategies-dont-lead-love-these-skills-do-jvinc/
+<a href="http://goodmenproject.com/featured-content/strategies-dont-lead-love-these-skills-do-jvinc/" target="_blank">http://goodmenproject.com/featured-content/strategies-dont-lead-love-these-skills-do-jvinc/</a>
 
-http://goodmenproject.com/featured-content/8-things-all-couples-can-do-to-fix-their-broken-relationship-hesaid/
+<a href="http://goodmenproject.com/featured-content/8-things-all-couples-can-do-to-fix-their-broken-relationship-hesaid/" target="_blank">http://goodmenproject.com/featured-content/8-things-all-couples-can-do-to-fix-their-broken-relationship-hesaid/</a>
 
-http://goodmenproject.com/featured-content/evolution-of-love-the-last-goodbye-dg/
+<a href="http://goodmenproject.com/featured-content/evolution-of-love-the-last-goodbye-dg/" target="_blank">http://goodmenproject.com/featured-content/evolution-of-love-the-last-goodbye-dg/</a>
 
-http://www.theplaidzebra.com/aldous-huxleys-wife-wrote-this-letter-about-injecting-him-with-lsd-right-before-he-died/
+<a href="http://www.theplaidzebra.com/aldous-huxleys-wife-wrote-this-letter-about-injecting-him-with-lsd-right-before-he-died/" target="_blank">http://www.theplaidzebra.com/aldous-huxleys-wife-wrote-this-letter-about-injecting-him-with-lsd-right-before-he-died/</a>
 
-http://www.elephantjournal.com/2014/09/11-things-introverts-want-you-to-know-dominica-applegate/
+<a href="http://www.elephantjournal.com/2014/09/11-things-introverts-want-you-to-know-dominica-applegate/" target="_blank">http://www.elephantjournal.com/2014/09/11-things-introverts-want-you-to-know-dominica-applegate/</a>
 
-http://www.vice.com/read/global-drugs-survey-narcotic-safety-876?utm_source=vicefbus
+<a href="http://www.vice.com/read/global-drugs-survey-narcotic-safety-876?utm_source=vicefbus" target="_blank">http://www.vice.com/read/global-drugs-survey-narcotic-safety-876?utm_source=vicefbus</a>
 
-http://lowercasecapital.com/2015/06/03/what-twitter-can-be-2/
+<a href="http://lowercasecapital.com/2015/06/03/what-twitter-can-be-2/" target="_blank">http://lowercasecapital.com/2015/06/03/what-twitter-can-be-2/</a>
 
-https://github.com/mateogianolio/mlp-character-recognition
+<a href="https://github.com/mateogianolio/mlp-character-recognition" target="_blank">https://github.com/mateogianolio/mlp-character-recognition</a>
 
-http://www.elephantjournal.com/2015/06/how-to-attract-a-consciousevolved-man/
+<a href="http://www.elephantjournal.com/2015/06/how-to-attract-a-consciousevolved-man/" target="_blank">http://www.elephantjournal.com/2015/06/how-to-attract-a-consciousevolved-man/</a>
