--- a/notes/20150609.md
+++ b/notes/20150609.md
@@ -1,23 +1,23 @@
-http://goodmenproject.com/featured-content/meeting-women-never-run-things-say/
+<a href="http://goodmenproject.com/featured-content/meeting-women-never-run-things-say/" target="_blank">http://goodmenproject.com/featured-content/meeting-women-never-run-things-say/</a>
 
-http://goodmenproject.com/featured-content/women-leave-men-love-every-man-needs-know/
+<a href="http://goodmenproject.com/featured-content/women-leave-men-love-every-man-needs-know/" target="_blank">http://goodmenproject.com/featured-content/women-leave-men-love-every-man-needs-know/</a>
 
-http://goodmenproject.com/featured-content/this-kids-game-will-build-intimacy-and-improve-your-sex-life%E2%80%8B-dg/
+<a href="http://goodmenproject.com/featured-content/this-kids-game-will-build-intimacy-and-improve-your-sex-life%E2%80%8B-dg/" target="_blank">http://goodmenproject.com/featured-content/this-kids-game-will-build-intimacy-and-improve-your-sex-life%E2%80%8B-dg/</a>
 
-http://goodmenproject.com/featured-content/what-you-realize-when-the-one-who-got-away-wasnt-the-one-at-all-kt/
+<a href="http://goodmenproject.com/featured-content/what-you-realize-when-the-one-who-got-away-wasnt-the-one-at-all-kt/" target="_blank">http://goodmenproject.com/featured-content/what-you-realize-when-the-one-who-got-away-wasnt-the-one-at-all-kt/</a>
 
-http://goodmenproject.com/featured-content/why-men-keep-demanding-megasahd/
+<a href="http://goodmenproject.com/featured-content/why-men-keep-demanding-megasahd/" target="_blank">http://goodmenproject.com/featured-content/why-men-keep-demanding-megasahd/</a>
 
-http://www.elephantjournal.com/2014/03/dear-husband-if-you-do-these-things-ill-make-your-dreams-come-true/
+<a href="http://www.elephantjournal.com/2014/03/dear-husband-if-you-do-these-things-ill-make-your-dreams-come-true/" target="_blank">http://www.elephantjournal.com/2014/03/dear-husband-if-you-do-these-things-ill-make-your-dreams-come-true/</a>
 
-http://www.elephantjournal.com/2014/05/how-do-we-know-if-we-love-someone-john-kim/
+<a href="http://www.elephantjournal.com/2014/05/how-do-we-know-if-we-love-someone-john-kim/" target="_blank">http://www.elephantjournal.com/2014/05/how-do-we-know-if-we-love-someone-john-kim/</a>
 
-http://www.elephantjournal.com/2015/06/the-way-you-own-me-poem-adult/
+<a href="http://www.elephantjournal.com/2015/06/the-way-you-own-me-poem-adult/" target="_blank">http://www.elephantjournal.com/2015/06/the-way-you-own-me-poem-adult/</a>
 
-http://www.filmsforaction.org/news/school_is_a_prison_and_damaging_our_kids/
+<a href="http://www.filmsforaction.org/news/school_is_a_prison_and_damaging_our_kids/" target="_blank">http://www.filmsforaction.org/news/school_is_a_prison_and_damaging_our_kids/</a>
 
-http://www.filmsforaction.org/news/why_do_people_defend_unjust_inept_and_corrupt_systems/
+<a href="http://www.filmsforaction.org/news/why_do_people_defend_unjust_inept_and_corrupt_systems/" target="_blank">http://www.filmsforaction.org/news/why_do_people_defend_unjust_inept_and_corrupt_systems/</a>
 
-http://www.digitaljournal.com/science/experiment-shows-future-events-decide-what-happens-in-the-past/article/434829
+<a href="http://www.digitaljournal.com/science/experiment-shows-future-events-decide-what-happens-in-the-past/article/434829" target="_blank">http://www.digitaljournal.com/science/experiment-shows-future-events-decide-what-happens-in-the-past/article/434829</a>
 
-http://www.filmsforaction.org/news/six_habits_of_highly_empathic_people/
+<a href="http://www.filmsforaction.org/news/six_habits_of_highly_empathic_people/" target="_blank">http://www.filmsforaction.org/news/six_habits_of_highly_empathic_people/</a>
