--- a/notes/20150610.md
+++ b/notes/20150610.md
@@ -1,13 +1,13 @@
-http://www.elephantjournal.com/2012/12/18-relationship-red-flags-every-woman-should-know-plus-a-video/
+<a href="http://www.elephantjournal.com/2012/12/18-relationship-red-flags-every-woman-should-know-plus-a-video/" target="_blank">http://www.elephantjournal.com/2012/12/18-relationship-red-flags-every-woman-should-know-plus-a-video/</a>
 
-http://goodmenproject.com/featured-content/touch-is-my-love-language-mkdn/
+<a href="http://goodmenproject.com/featured-content/touch-is-my-love-language-mkdn/" target="_blank">http://goodmenproject.com/featured-content/touch-is-my-love-language-mkdn/</a>
 
-http://goodmenproject.com/featured-content/megasahd-the-lack-of-gentle-platonic-touch-in-mens-lives-is-a-killer/
+<a href="http://goodmenproject.com/featured-content/megasahd-the-lack-of-gentle-platonic-touch-in-mens-lives-is-a-killer/" target="_blank">http://goodmenproject.com/featured-content/megasahd-the-lack-of-gentle-platonic-touch-in-mens-lives-is-a-killer/</a>
 
-http://www.filmsforaction.org/news/the_starfish_and_the_spider_8_principles_of_decentralization/#.VXahvqn52y8.facebook
+<a href="http://www.filmsforaction.org/news/the_starfish_and_the_spider_8_principles_of_decentralization/#.VXahvqn52y8.facebook" target="_blank">http://www.filmsforaction.org/news/the_starfish_and_the_spider_8_principles_of_decentralization/#.VXahvqn52y8.facebook</a>
 
-http://www.filmsforaction.org/articles/the-greening-of-the-self/
+<a href="http://www.filmsforaction.org/articles/the-greening-of-the-self/" target="_blank">http://www.filmsforaction.org/articles/the-greening-of-the-self/</a>
 
-http://www.elephantjournal.com/2014/04/18-ways-women-are-disconnected-from-themselves-falan-storm/
+<a href="http://www.elephantjournal.com/2014/04/18-ways-women-are-disconnected-from-themselves-falan-storm/" target="_blank">http://www.elephantjournal.com/2014/04/18-ways-women-are-disconnected-from-themselves-falan-storm/</a>
 
-http://www.elephantjournal.com/2015/06/how-mature-men-women-deal-with-emotionalwithdrawal/
+<a href="http://www.elephantjournal.com/2015/06/how-mature-men-women-deal-with-emotionalwithdrawal/" target="_blank">http://www.elephantjournal.com/2015/06/how-mature-men-women-deal-with-emotionalwithdrawal/</a>
