--- a/notes/20150612.md
+++ b/notes/20150612.md
@@ -1,1 +1,1 @@
-http://www.elephantjournal.com/2013/11/the-best-advice-i-ever-got-about-love/
+<a href="http://www.elephantjournal.com/2013/11/the-best-advice-i-ever-got-about-love/" target="_blank">http://www.elephantjournal.com/2013/11/the-best-advice-i-ever-got-about-love/</a>
