--- a/notes/20150615.md
+++ b/notes/20150615.md
@@ -1,33 +1,33 @@
-http://www.elephantjournal.com/2011/02/top-5-reasons-not-to-get-married/
+<a href="http://www.elephantjournal.com/2011/02/top-5-reasons-not-to-get-married/" target="_blank">http://www.elephantjournal.com/2011/02/top-5-reasons-not-to-get-married/</a>
 
-http://goodmenproject.com/featured-content/how-to-completely-eliminate-drama-in-your-relationship-mjr/
+<a href="http://goodmenproject.com/featured-content/how-to-completely-eliminate-drama-in-your-relationship-mjr/" target="_blank">http://goodmenproject.com/featured-content/how-to-completely-eliminate-drama-in-your-relationship-mjr/</a>
 
-http://www.elephantjournal.com/2015/06/a-brief-yet-in-depth-summation-of-all-the-worlds-historical-wisdom-on-what-do-to-when-he-or-she-seems-to-be-not-that-into-you/
+<a href="http://www.elephantjournal.com/2015/06/a-brief-yet-in-depth-summation-of-all-the-worlds-historical-wisdom-on-what-do-to-when-he-or-she-seems-to-be-not-that-into-you/" target="_blank">http://www.elephantjournal.com/2015/06/a-brief-yet-in-depth-summation-of-all-the-worlds-historical-wisdom-on-what-do-to-when-he-or-she-seems-to-be-not-that-into-you/</a>
 
-http://in5d.com/its-all-collapsing-right-on-schedule/
+<a href="http://in5d.com/its-all-collapsing-right-on-schedule/" target="_blank">http://in5d.com/its-all-collapsing-right-on-schedule/</a>
 
-http://www.elephantjournal.com/2014/04/thoughts-on-letting-go-from-someone-who-holds-on-emily-bartran/
+<a href="http://www.elephantjournal.com/2014/04/thoughts-on-letting-go-from-someone-who-holds-on-emily-bartran/" target="_blank">http://www.elephantjournal.com/2014/04/thoughts-on-letting-go-from-someone-who-holds-on-emily-bartran/</a>
 
-http://goodmenproject.com/featured-content/7-ways-to-get-back-to-being-in-love-kt/
+<a href="http://goodmenproject.com/featured-content/7-ways-to-get-back-to-being-in-love-kt/" target="_blank">http://goodmenproject.com/featured-content/7-ways-to-get-back-to-being-in-love-kt/</a>
 
-http://www.filmsforaction.org/watch/thom_hartmann_the_story_of_the_5_kings_who_rule_america/
+<a href="http://www.filmsforaction.org/watch/thom_hartmann_the_story_of_the_5_kings_who_rule_america/" target="_blank">http://www.filmsforaction.org/watch/thom_hartmann_the_story_of_the_5_kings_who_rule_america/</a>
 
-http://goodmenproject.com/featured-content/8-guilty-thoughts-that-keep-you-with-someone-who-doesnt-deserve-you-dg/
+<a href="http://goodmenproject.com/featured-content/8-guilty-thoughts-that-keep-you-with-someone-who-doesnt-deserve-you-dg/" target="_blank">http://goodmenproject.com/featured-content/8-guilty-thoughts-that-keep-you-with-someone-who-doesnt-deserve-you-dg/</a>
 
-http://goodmenproject.com/featured-content/hes-a-5-looking-to-score-a-10-alnpt/
+<a href="http://goodmenproject.com/featured-content/hes-a-5-looking-to-score-a-10-alnpt/" target="_blank">http://goodmenproject.com/featured-content/hes-a-5-looking-to-score-a-10-alnpt/</a>
 
-http://goodmenproject.com/featured-content/have-you-seen-a-mans-heart-ldvs/
+<a href="http://goodmenproject.com/featured-content/have-you-seen-a-mans-heart-ldvs/" target="_blank">http://goodmenproject.com/featured-content/have-you-seen-a-mans-heart-ldvs/</a>
 
-http://goodmenproject.com/featured-content/5-signs-your-relationship-isnt-working-and-youre-wasting-your-time-kt/
+<a href="http://goodmenproject.com/featured-content/5-signs-your-relationship-isnt-working-and-youre-wasting-your-time-kt/" target="_blank">http://goodmenproject.com/featured-content/5-signs-your-relationship-isnt-working-and-youre-wasting-your-time-kt/</a>
 
-http://goodmenproject.com/featured-content/how-successful-people-work-less-and-get-more-done-fiff/
+<a href="http://goodmenproject.com/featured-content/how-successful-people-work-less-and-get-more-done-fiff/" target="_blank">http://goodmenproject.com/featured-content/how-successful-people-work-less-and-get-more-done-fiff/</a>
 
-http://www.filmsforaction.org/watch/this-changes-fuck-all/
+<a href="http://www.filmsforaction.org/watch/this-changes-fuck-all/" target="_blank">http://www.filmsforaction.org/watch/this-changes-fuck-all/</a>
 
-http://www.filmsforaction.org/watch/climate_change_lord_monckton_rapbattles_al_gore/
+<a href="http://www.filmsforaction.org/watch/climate_change_lord_monckton_rapbattles_al_gore/" target="_blank">http://www.filmsforaction.org/watch/climate_change_lord_monckton_rapbattles_al_gore/</a>
 
-http://www.elephantjournal.com/2015/04/4-practical-ways-for-women-to-recover-from-everyday-life-exhaustion/
+<a href="http://www.elephantjournal.com/2015/04/4-practical-ways-for-women-to-recover-from-everyday-life-exhaustion/" target="_blank">http://www.elephantjournal.com/2015/04/4-practical-ways-for-women-to-recover-from-everyday-life-exhaustion/</a>
 
-http://www.filmsforaction.org/articles/its-the-planet-stupid-capitalism-and-the-destruction-of-the-commons/
+<a href="http://www.filmsforaction.org/articles/its-the-planet-stupid-capitalism-and-the-destruction-of-the-commons/" target="_blank">http://www.filmsforaction.org/articles/its-the-planet-stupid-capitalism-and-the-destruction-of-the-commons/</a>
 
-http://www.elephantjournal.com/2013/07/how-to-exit-the-friendzone/
+<a href="http://www.elephantjournal.com/2013/07/how-to-exit-the-friendzone/" target="_blank">http://www.elephantjournal.com/2013/07/how-to-exit-the-friendzone/</a>
