--- a/notes/20150617.md
+++ b/notes/20150617.md
@@ -1,31 +1,31 @@
-http://goodmenproject.com/featured-content/difference-needing-wanting-loving-somebody-kt/
+<a href="http://goodmenproject.com/featured-content/difference-needing-wanting-loving-somebody-kt/" target="_blank">http://goodmenproject.com/featured-content/difference-needing-wanting-loving-somebody-kt/</a>
 
-http://goodmenproject.com/ethics-values/dont-go-back-to-sleep-the-world-desperately-needs-you-dkz/
+<a href="http://goodmenproject.com/ethics-values/dont-go-back-to-sleep-the-world-desperately-needs-you-dkz/" target="_blank">http://goodmenproject.com/ethics-values/dont-go-back-to-sleep-the-world-desperately-needs-you-dkz/</a>
 
-http://goodmenproject.com/featured-content/one-ever-taught-how-to-be-a-man-bnr/
+<a href="http://goodmenproject.com/featured-content/one-ever-taught-how-to-be-a-man-bnr/" target="_blank">http://goodmenproject.com/featured-content/one-ever-taught-how-to-be-a-man-bnr/</a>
 
-http://thespiritscience.net/2015/05/16/shifting-your-vibration-to-manifest-your-desires/
+<a href="http://thespiritscience.net/2015/05/16/shifting-your-vibration-to-manifest-your-desires/" target="_blank">http://thespiritscience.net/2015/05/16/shifting-your-vibration-to-manifest-your-desires/</a>
 
-http://elitedaily.com/dating/boyfriend-or-a-girlfriend-you-want-a-partner/898534/
+<a href="http://elitedaily.com/dating/boyfriend-or-a-girlfriend-you-want-a-partner/898534/" target="_blank">http://elitedaily.com/dating/boyfriend-or-a-girlfriend-you-want-a-partner/898534/</a>
 
-http://goodlandproject.com.au/2015/06/david-marsh-simplicity-for-complexity/
+<a href="http://goodlandproject.com.au/2015/06/david-marsh-simplicity-for-complexity/" target="_blank">http://goodlandproject.com.au/2015/06/david-marsh-simplicity-for-complexity/</a>
 
-http://goodmenproject.com/featured-content/how-to-get-your-partner-to-initiate-sex-more-often-jgc/
+<a href="http://goodmenproject.com/featured-content/how-to-get-your-partner-to-initiate-sex-more-often-jgc/" target="_blank">http://goodmenproject.com/featured-content/how-to-get-your-partner-to-initiate-sex-more-often-jgc/</a>
 
-http://www.cs.uni.edu/~wallingf/blog/archives/monthly/2015-06.html#e2015-06-14T09_17_33.htm
+<a href="http://www.cs.uni.edu/~wallingf/blog/archives/monthly/2015-06.html#e2015-06-14T09_17_33.htm" target="_blank">http://www.cs.uni.edu/~wallingf/blog/archives/monthly/2015-06.html#e2015-06-14T09_17_33.htm</a>
 
-http://www.elephantjournal.com/2015/02/what-i-learned-from-not-being-loved-back/
+<a href="http://www.elephantjournal.com/2015/02/what-i-learned-from-not-being-loved-back/" target="_blank">http://www.elephantjournal.com/2015/02/what-i-learned-from-not-being-loved-back/</a>
 
-http://goodmenproject.com/featured-content/one-ever-taught-how-to-be-a-man-bnr/
+<a href="http://goodmenproject.com/featured-content/one-ever-taught-how-to-be-a-man-bnr/" target="_blank">http://goodmenproject.com/featured-content/one-ever-taught-how-to-be-a-man-bnr/</a>
 
-http://www.elephantjournal.com/2014/09/6-subtle-relationship-deal-breakers/
+<a href="http://www.elephantjournal.com/2014/09/6-subtle-relationship-deal-breakers/" target="_blank">http://www.elephantjournal.com/2014/09/6-subtle-relationship-deal-breakers/</a>
 
-http://tinybuddha.com/blog/how-to-help-someone-feel-loved-and-understood/
+<a href="http://tinybuddha.com/blog/how-to-help-someone-feel-loved-and-understood/" target="_blank">http://tinybuddha.com/blog/how-to-help-someone-feel-loved-and-understood/</a>
 
-http://goodmenproject.com/featured-content/today-i-walk-away-dg/
+<a href="http://goodmenproject.com/featured-content/today-i-walk-away-dg/" target="_blank">http://goodmenproject.com/featured-content/today-i-walk-away-dg/</a>
 
-http://www.elephantjournal.com/2015/06/why-i-disappeared-an-open-letter-to-the-girls-i-never-texted-back/
+<a href="http://www.elephantjournal.com/2015/06/why-i-disappeared-an-open-letter-to-the-girls-i-never-texted-back/" target="_blank">http://www.elephantjournal.com/2015/06/why-i-disappeared-an-open-letter-to-the-girls-i-never-texted-back/</a>
 
-http://www.elephantjournal.com/2015/04/how-to-fall-in-love-with-yourself/
+<a href="http://www.elephantjournal.com/2015/04/how-to-fall-in-love-with-yourself/" target="_blank">http://www.elephantjournal.com/2015/04/how-to-fall-in-love-with-yourself/</a>
 
-https://redpowermedia.wordpress.com/2015/06/12/native-americans-concerned-with-rainbow-warriors-gathering-in-the-black-hills/
+<a href="https://redpowermedia.wordpress.com/2015/06/12/native-americans-concerned-with-rainbow-warriors-gathering-in-the-black-hills/" target="_blank">https://redpowermedia.wordpress.com/2015/06/12/native-americans-concerned-with-rainbow-warriors-gathering-in-the-black-hills/</a>
