--- a/notes/20150618.md
+++ b/notes/20150618.md
@@ -1,45 +1,45 @@
-http://www.elephantjournal.com/2013/07/real-love-is-home-base/
+<a href="http://www.elephantjournal.com/2013/07/real-love-is-home-base/" target="_blank">http://www.elephantjournal.com/2013/07/real-love-is-home-base/</a>
 
-http://goodmenproject.com/featured-content/the-real-reason-guys-get-tunnel-vision-with-women-gmp/
+<a href="http://goodmenproject.com/featured-content/the-real-reason-guys-get-tunnel-vision-with-women-gmp/" target="_blank">http://goodmenproject.com/featured-content/the-real-reason-guys-get-tunnel-vision-with-women-gmp/</a>
 
-http://www.elephantjournal.com/2014/02/why-men-withdraw-emotionally/
+<a href="http://www.elephantjournal.com/2014/02/why-men-withdraw-emotionally/" target="_blank">http://www.elephantjournal.com/2014/02/why-men-withdraw-emotionally/</a>
 
-http://www.elephantjournal.com/2014/02/the-one-thing-we-need-to-have-a-healthy-relationship/
+<a href="http://www.elephantjournal.com/2014/02/the-one-thing-we-need-to-have-a-healthy-relationship/" target="_blank">http://www.elephantjournal.com/2014/02/the-one-thing-we-need-to-have-a-healthy-relationship/</a>
 
-http://www.elephantjournal.com/2015/06/forget-romance-give-me-a-stubborn-love/
+<a href="http://www.elephantjournal.com/2015/06/forget-romance-give-me-a-stubborn-love/" target="_blank">http://www.elephantjournal.com/2015/06/forget-romance-give-me-a-stubborn-love/</a>
 
-http://www.elephantjournal.com/2015/01/this-is-what-happened-when-you-broke-my-heart/
+<a href="http://www.elephantjournal.com/2015/01/this-is-what-happened-when-you-broke-my-heart/" target="_blank">http://www.elephantjournal.com/2015/01/this-is-what-happened-when-you-broke-my-heart/</a>
 
-http://www.elephantjournal.com/2011/09/love-the-most-popular-obsession/
+<a href="http://www.elephantjournal.com/2011/09/love-the-most-popular-obsession/" target="_blank">http://www.elephantjournal.com/2011/09/love-the-most-popular-obsession/</a>
 
-http://www.elephantjournal.com/2015/02/i-tried-naked-yoga-got-unexpected-results/
+<a href="http://www.elephantjournal.com/2015/02/i-tried-naked-yoga-got-unexpected-results/" target="_blank">http://www.elephantjournal.com/2015/02/i-tried-naked-yoga-got-unexpected-results/</a>
 
-http://www.elephantjournal.com/2014/11/the-real-reason-we-dig-ourselves-into-holes/
+<a href="http://www.elephantjournal.com/2014/11/the-real-reason-we-dig-ourselves-into-holes/" target="_blank">http://www.elephantjournal.com/2014/11/the-real-reason-we-dig-ourselves-into-holes/</a>
 
-http://goodmenproject.com/featured-content/honest-communication-doesnt-hurt-kcon/
+<a href="http://goodmenproject.com/featured-content/honest-communication-doesnt-hurt-kcon/" target="_blank">http://goodmenproject.com/featured-content/honest-communication-doesnt-hurt-kcon/</a>
 
-http://munchies.vice.com/articles/should-you-be-eating-lsd-for-breakfast?utm_source=vicefbus
+<a href="http://munchies.vice.com/articles/should-you-be-eating-lsd-for-breakfast?utm_source=vicefbus" target="_blank">http://munchies.vice.com/articles/should-you-be-eating-lsd-for-breakfast?utm_source=vicefbus</a>
 
-http://d1w32dwlo9psx6.cloudfront.net/assets/engineering-principles-and-values-ebbecf7fdb560fcf6eb60af4284615e7.pdf
+<a href="http://d1w32dwlo9psx6.cloudfront.net/assets/engineering-principles-and-values-ebbecf7fdb560fcf6eb60af4284615e7.pdf" target="_blank">http://d1w32dwlo9psx6.cloudfront.net/assets/engineering-principles-and-values-ebbecf7fdb560fcf6eb60af4284615e7.pdf</a>
 
-http://goodmenproject.com/featured-content/the-real-reason-guys-get-tunnel-vision-with-women-gmp/
+<a href="http://goodmenproject.com/featured-content/the-real-reason-guys-get-tunnel-vision-with-women-gmp/" target="_blank">http://goodmenproject.com/featured-content/the-real-reason-guys-get-tunnel-vision-with-women-gmp/</a>
 
-http://www.elephantjournal.com/2014/12/12-things-i-love-about-conscious-women/
+<a href="http://www.elephantjournal.com/2014/12/12-things-i-love-about-conscious-women/" target="_blank">http://www.elephantjournal.com/2014/12/12-things-i-love-about-conscious-women/</a>
 
-http://www.elephantjournal.com/2012/11/11-spiritual-books-that-have-blown-my-fcking-mind/
+<a href="http://www.elephantjournal.com/2012/11/11-spiritual-books-that-have-blown-my-fcking-mind/" target="_blank">http://www.elephantjournal.com/2012/11/11-spiritual-books-that-have-blown-my-fcking-mind/</a>
 
-http://www.elephantjournal.com/2015/03/to-the-men-who-want-to-keep-it-simple/
+<a href="http://www.elephantjournal.com/2015/03/to-the-men-who-want-to-keep-it-simple/" target="_blank">http://www.elephantjournal.com/2015/03/to-the-men-who-want-to-keep-it-simple/</a>
 
-http://www.elephantjournal.com/2015/03/most-women-wont-let-men-see-the-most-magnetizing-thing-about-us/
+<a href="http://www.elephantjournal.com/2015/03/most-women-wont-let-men-see-the-most-magnetizing-thing-about-us/" target="_blank">http://www.elephantjournal.com/2015/03/most-women-wont-let-men-see-the-most-magnetizing-thing-about-us/</a>
 
-http://www.elephantjournal.com/2012/06/i-learned-more-about-sex-when-i-gave-it-up/
+<a href="http://www.elephantjournal.com/2012/06/i-learned-more-about-sex-when-i-gave-it-up/" target="_blank">http://www.elephantjournal.com/2012/06/i-learned-more-about-sex-when-i-gave-it-up/</a>
 
-http://www.elephantjournal.com/2014/11/lets-make-love-by-breaking-all-the-rules/
+<a href="http://www.elephantjournal.com/2014/11/lets-make-love-by-breaking-all-the-rules/" target="_blank">http://www.elephantjournal.com/2014/11/lets-make-love-by-breaking-all-the-rules/</a>
 
-http://blog.netflix.com/2015/06/the-netflix-website-gets-major-upgrade.html
+<a href="http://blog.netflix.com/2015/06/the-netflix-website-gets-major-upgrade.html" target="_blank">http://blog.netflix.com/2015/06/the-netflix-website-gets-major-upgrade.html</a>
 
-http://camphillspecialschool.org/admission-aid/plan-a-visit/
+<a href="http://camphillspecialschool.org/admission-aid/plan-a-visit/" target="_blank">http://camphillspecialschool.org/admission-aid/plan-a-visit/</a>
 
-https://au.news.yahoo.com/thewest/a/28487039/the-earth-is-quickly-running-out-of-water-nasa/
+<a href="https://au.news.yahoo.com/thewest/a/28487039/the-earth-is-quickly-running-out-of-water-nasa/" target="_blank">https://au.news.yahoo.com/thewest/a/28487039/the-earth-is-quickly-running-out-of-water-nasa/</a>
 
-http://www.offgridquest.com/mobility/his-car-got-463-mpg-and-ran-on-fumes
+<a href="http://www.offgridquest.com/mobility/his-car-got-463-mpg-and-ran-on-fumes" target="_blank">http://www.offgridquest.com/mobility/his-car-got-463-mpg-and-ran-on-fumes</a>
