--- a/notes/20150620.md
+++ b/notes/20150620.md
@@ -1,1 +1,1 @@
-http://thespiritscience.net/2015/06/19/17-legal-brain-enhancing-drugs-that-will-expand-your-consciousness/
+<a href="http://thespiritscience.net/2015/06/19/17-legal-brain-enhancing-drugs-that-will-expand-your-consciousness/" target="_blank">http://thespiritscience.net/2015/06/19/17-legal-brain-enhancing-drugs-that-will-expand-your-consciousness/</a>
