--- a/notes/20150622.md
+++ b/notes/20150622.md
@@ -2,6 +2,6 @@ Religion is a state.
 
 ---
 
-http://www.elephantjournal.com/2012/04/im-so-glad-were-not-friends-anymore/
+<a href="http://www.elephantjournal.com/2012/04/im-so-glad-were-not-friends-anymore/" target="_blank">http://www.elephantjournal.com/2012/04/im-so-glad-were-not-friends-anymore/</a>
 
-http://www.lifehack.org/articles/communication/10-things-true-friends-dont.html
+<a href="http://www.lifehack.org/articles/communication/10-things-true-friends-dont.html" target="_blank">http://www.lifehack.org/articles/communication/10-things-true-friends-dont.html</a>
