--- a/notes/20150623.md
+++ b/notes/20150623.md
@@ -1,5 +1,5 @@
-http://www.filmsforaction.org/watch/what-does-coal-have-to-do-with-hunger/
+<a href="http://www.filmsforaction.org/watch/what-does-coal-have-to-do-with-hunger/" target="_blank">http://www.filmsforaction.org/watch/what-does-coal-have-to-do-with-hunger/</a>
 
-http://theunboundedspirit.com/17-things-you-should-know-before-you-fall-in-love-with-an-old-soul/
+<a href="http://theunboundedspirit.com/17-things-you-should-know-before-you-fall-in-love-with-an-old-soul/" target="_blank">http://theunboundedspirit.com/17-things-you-should-know-before-you-fall-in-love-with-an-old-soul/</a>
 
-http://mytinysecrets.com/the-sacred-power-of-your-yoni-full-body-orgasm-cervical-orgasm-multiple-orgasm/
+<a href="http://mytinysecrets.com/the-sacred-power-of-your-yoni-full-body-orgasm-cervical-orgasm-multiple-orgasm/" target="_blank">http://mytinysecrets.com/the-sacred-power-of-your-yoni-full-body-orgasm-cervical-orgasm-multiple-orgasm/</a>
