--- a/notes/20150701.md
+++ b/notes/20150701.md
@@ -1,31 +1,31 @@
-http://goodmenproject.com/featured-content/never-really-gone-17-ways-the-person-who-broke-you-still-impacts-you-dg/
+<a href="http://goodmenproject.com/featured-content/never-really-gone-17-ways-the-person-who-broke-you-still-impacts-you-dg/" target="_blank">http://goodmenproject.com/featured-content/never-really-gone-17-ways-the-person-who-broke-you-still-impacts-you-dg/</a>
 
-http://goodmenproject.com/featured-content/5-unique-qualities-man-every-woman-searching-gmp/
+<a href="http://goodmenproject.com/featured-content/5-unique-qualities-man-every-woman-searching-gmp/" target="_blank">http://goodmenproject.com/featured-content/5-unique-qualities-man-every-woman-searching-gmp/</a>
 
-http://goodmenproject.com/featured-content/the-one-thing-that-keeps-you-from-meeting-the-right-person-dg/
+<a href="http://goodmenproject.com/featured-content/the-one-thing-that-keeps-you-from-meeting-the-right-person-dg/" target="_blank">http://goodmenproject.com/featured-content/the-one-thing-that-keeps-you-from-meeting-the-right-person-dg/</a>
 
-http://goodmenproject.com/featured-content/its-time-to-break-up-when-hesaid/
+<a href="http://goodmenproject.com/featured-content/its-time-to-break-up-when-hesaid/" target="_blank">http://goodmenproject.com/featured-content/its-time-to-break-up-when-hesaid/</a>
 
-http://www.washingtonpost.com/blogs/wonkblog/wp/2015/06/29/things-in-puerto-rico-are-getting-really-bad-what-you-need-to-know/?tid=pm_business_pop_b
+<a href="http://www.washingtonpost.com/blogs/wonkblog/wp/2015/06/29/things-in-puerto-rico-are-getting-really-bad-what-you-need-to-know/?tid=pm_business_pop_b" target="_blank">http://www.washingtonpost.com/blogs/wonkblog/wp/2015/06/29/things-in-puerto-rico-are-getting-really-bad-what-you-need-to-know/?tid=pm_business_pop_b</a>
 
-http://goodmenproject.com/featured-content/8-immature-dating-habits-you-need-to-leave-behind-hesaid/
+<a href="http://goodmenproject.com/featured-content/8-immature-dating-habits-you-need-to-leave-behind-hesaid/" target="_blank">http://goodmenproject.com/featured-content/8-immature-dating-habits-you-need-to-leave-behind-hesaid/</a>
 
-http://www.alternet.org/drugs/microdosing-new-low-key-way-use-psychedelics?sc=fb
+<a href="http://www.alternet.org/drugs/microdosing-new-low-key-way-use-psychedelics?sc=fb" target="_blank">http://www.alternet.org/drugs/microdosing-new-low-key-way-use-psychedelics?sc=fb</a>
 
-http://www.collective-evolution.com/2015/06/09/the-end-of-diet-soda-huge-study-links-aspartame-to-these-major-health-problems/
+<a href="http://www.collective-evolution.com/2015/06/09/the-end-of-diet-soda-huge-study-links-aspartame-to-these-major-health-problems/" target="_blank">http://www.collective-evolution.com/2015/06/09/the-end-of-diet-soda-huge-study-links-aspartame-to-these-major-health-problems/</a>
 
-http://worldtruth.tv/man-noticed-this-abandoned-hangar-but-whats-inside-caught-him-by-surprise/
+<a href="http://worldtruth.tv/man-noticed-this-abandoned-hangar-but-whats-inside-caught-him-by-surprise/" target="_blank">http://worldtruth.tv/man-noticed-this-abandoned-hangar-but-whats-inside-caught-him-by-surprise/</a>
 
-http://goodmenproject.com/featured-content/8-things-make-man-realize-hes-ready-settle-kt/
+<a href="http://goodmenproject.com/featured-content/8-things-make-man-realize-hes-ready-settle-kt/" target="_blank">http://goodmenproject.com/featured-content/8-things-make-man-realize-hes-ready-settle-kt/</a>
 
-http://www.elephantjournal.com/2015/06/star-of-bethlehem-visible-on-june-30th-for-the-first-time-in-2000-years/
+<a href="http://www.elephantjournal.com/2015/06/star-of-bethlehem-visible-on-june-30th-for-the-first-time-in-2000-years/" target="_blank">http://www.elephantjournal.com/2015/06/star-of-bethlehem-visible-on-june-30th-for-the-first-time-in-2000-years/</a>
 
-http://www.newsweek.com/fluoridation-may-not-prevent-cavities-huge-study-shows-348251
+<a href="http://www.newsweek.com/fluoridation-may-not-prevent-cavities-huge-study-shows-348251" target="_blank">http://www.newsweek.com/fluoridation-may-not-prevent-cavities-huge-study-shows-348251</a>
 
-http://www.elephantjournal.com/2015/05/the-other-far-worse-f-word/
+<a href="http://www.elephantjournal.com/2015/05/the-other-far-worse-f-word/" target="_blank">http://www.elephantjournal.com/2015/05/the-other-far-worse-f-word/</a>
 
-https://www.youtube.com/watch?v=rsL6mKxtOlQ&feature=youtu.be
+<a href="https://www.youtube.com/watch?v=rsL6mKxtOlQ&feature=youtu.be" target="_blank">https://www.youtube.com/watch?v=rsL6mKxtOlQ&feature=youtu.be</a>
 
-http://www.sciencealert.com/a-mathematical-formula-reveals-the-secret-to-lasting-relationships
+<a href="http://www.sciencealert.com/a-mathematical-formula-reveals-the-secret-to-lasting-relationships" target="_blank">http://www.sciencealert.com/a-mathematical-formula-reveals-the-secret-to-lasting-relationships</a>
 
-http://www.mindbodygreen.com/0-13913/if-you-cant-find-a-good-partner-youre-probably-making-this-mistake.html
+<a href="http://www.mindbodygreen.com/0-13913/if-you-cant-find-a-good-partner-youre-probably-making-this-mistake.html" target="_blank">http://www.mindbodygreen.com/0-13913/if-you-cant-find-a-good-partner-youre-probably-making-this-mistake.html</a>
