--- a/notes/20150702.md
+++ b/notes/20150702.md
@@ -1,25 +1,25 @@
-http://www.elephantjournal.com/2015/06/if-you-are-failing-at-finding-a-real-relationship-what-to-do-about-it/
+<a href="http://www.elephantjournal.com/2015/06/if-you-are-failing-at-finding-a-real-relationship-what-to-do-about-it/" target="_blank">http://www.elephantjournal.com/2015/06/if-you-are-failing-at-finding-a-real-relationship-what-to-do-about-it/</a>
 
-http://goodmenproject.com/ethics-values/the-top-10-blockers-to-courage-dsh/
+<a href="http://goodmenproject.com/ethics-values/the-top-10-blockers-to-courage-dsh/" target="_blank">http://goodmenproject.com/ethics-values/the-top-10-blockers-to-courage-dsh/</a>
 
-http://goodmenproject.com/featured-content/the-irony-of-being-a-gentleman-kzh/
+<a href="http://goodmenproject.com/featured-content/the-irony-of-being-a-gentleman-kzh/" target="_blank">http://goodmenproject.com/featured-content/the-irony-of-being-a-gentleman-kzh/</a>
 
-http://goodmenproject.com/featured-content/the-1-way-to-have-a-low-maintenance-relationship-slake/
+<a href="http://goodmenproject.com/featured-content/the-1-way-to-have-a-low-maintenance-relationship-slake/" target="_blank">http://goodmenproject.com/featured-content/the-1-way-to-have-a-low-maintenance-relationship-slake/</a>
 
-http://goodmenproject.com/featured-content/you-can-move-from-dating-to-love-with-one-simple-change-fiff/
+<a href="http://goodmenproject.com/featured-content/you-can-move-from-dating-to-love-with-one-simple-change-fiff/" target="_blank">http://goodmenproject.com/featured-content/you-can-move-from-dating-to-love-with-one-simple-change-fiff/</a>
 
-http://goodmenproject.com/featured-content/why-poly-marriage-works-for-us-kt/
+<a href="http://goodmenproject.com/featured-content/why-poly-marriage-works-for-us-kt/" target="_blank">http://goodmenproject.com/featured-content/why-poly-marriage-works-for-us-kt/</a>
 
-http://goodmenproject.com/featured-content/inside-the-prison-of-my-mind-s2h/
+<a href="http://goodmenproject.com/featured-content/inside-the-prison-of-my-mind-s2h/" target="_blank">http://goodmenproject.com/featured-content/inside-the-prison-of-my-mind-s2h/</a>
 
-http://goodmenproject.com/featured-content/the-one-thing-that-keeps-you-from-meeting-the-right-person-dg/
+<a href="http://goodmenproject.com/featured-content/the-one-thing-that-keeps-you-from-meeting-the-right-person-dg/" target="_blank">http://goodmenproject.com/featured-content/the-one-thing-that-keeps-you-from-meeting-the-right-person-dg/</a>
 
-http://www.elephantjournal.com/2014/12/what-it-means-to-have-the-heart-of-an-empath/
+<a href="http://www.elephantjournal.com/2014/12/what-it-means-to-have-the-heart-of-an-empath/" target="_blank">http://www.elephantjournal.com/2014/12/what-it-means-to-have-the-heart-of-an-empath/</a>
 
-https://robertscribbler.wordpress.com/2015/06/29/half-a-million-acres-burned-in-just-one-day-alaska-shatters-record-for-worst-june-wildfire-outbreak-ever/
+<a href="https://robertscribbler.wordpress.com/2015/06/29/half-a-million-acres-burned-in-just-one-day-alaska-shatters-record-for-worst-june-wildfire-outbreak-ever/" target="_blank">https://robertscribbler.wordpress.com/2015/06/29/half-a-million-acres-burned-in-just-one-day-alaska-shatters-record-for-worst-june-wildfire-outbreak-ever/</a>
 
-http://www.takepart.com/article/2014/11/04/organic-food-world?cmpid=tp-ptnr-foodtank
+<a href="http://www.takepart.com/article/2014/11/04/organic-food-world?cmpid=tp-ptnr-foodtank" target="_blank">http://www.takepart.com/article/2014/11/04/organic-food-world?cmpid=tp-ptnr-foodtank</a>
 
-http://www.elephantjournal.com/2014/06/you-hurt-yourself-because-you-like-it-roni-elissabeth/
+<a href="http://www.elephantjournal.com/2014/06/you-hurt-yourself-because-you-like-it-roni-elissabeth/" target="_blank">http://www.elephantjournal.com/2014/06/you-hurt-yourself-because-you-like-it-roni-elissabeth/</a>
 
-http://themindunleashed.org/2014/03/first-lsd-study-40-years-finds-therapeutic-potential.html
+<a href="http://themindunleashed.org/2014/03/first-lsd-study-40-years-finds-therapeutic-potential.html" target="_blank">http://themindunleashed.org/2014/03/first-lsd-study-40-years-finds-therapeutic-potential.html</a>
