--- a/notes/20150703.md
+++ b/notes/20150703.md
@@ -1,10 +1,10 @@
-http://www.mindbodygreen.com/0-13440/6-attitudes-that-are-a-complete-turn-on.html
+<a href="http://www.mindbodygreen.com/0-13440/6-attitudes-that-are-a-complete-turn-on.html" target="_blank">http://www.mindbodygreen.com/0-13440/6-attitudes-that-are-a-complete-turn-on.html</a>
 
-https://agenda.weforum.org/2015/02/the-strengths-and-weaknesses-of-every-personality-type/
+<a href="https://agenda.weforum.org/2015/02/the-strengths-and-weaknesses-of-every-personality-type/" target="_blank">https://agenda.weforum.org/2015/02/the-strengths-and-weaknesses-of-every-personality-type/</a>
 
-http://www.csmonitor.com/Business/The-Bite/2015/0610/Organic-farming-is-financially-sustainable-worldwide-study-finds
+<a href="http://www.csmonitor.com/Business/The-Bite/2015/0610/Organic-farming-is-financially-sustainable-worldwide-study-finds" target="_blank">http://www.csmonitor.com/Business/The-Bite/2015/0610/Organic-farming-is-financially-sustainable-worldwide-study-finds</a>
 
-http://higherperspectives.com/einstein-quotes/?c=ss
+<a href="http://higherperspectives.com/einstein-quotes/?c=ss" target="_blank">http://higherperspectives.com/einstein-quotes/?c=ss</a>
 
 ---
 
@@ -20,7 +20,7 @@ When it sinks, so does a way of life; a way of being.
 
 ---
 
-http://www.learning-mind.com/empathetic-people-have-physical-differences-in-their-brains-study-finds/
+<a href="http://www.learning-mind.com/empathetic-people-have-physical-differences-in-their-brains-study-finds/" target="_blank">http://www.learning-mind.com/empathetic-people-have-physical-differences-in-their-brains-study-finds/</a>
 
 ---
 
@@ -38,27 +38,27 @@ I am an artist. My medium is reality.
 
 ---
 
-http://www.elephantjournal.com/2015/07/why-the-best-romances-often-have-endings/
+<a href="http://www.elephantjournal.com/2015/07/why-the-best-romances-often-have-endings/" target="_blank">http://www.elephantjournal.com/2015/07/why-the-best-romances-often-have-endings/</a>
 
-http://www.elephantjournal.com/2015/07/5-reasons-why-you-havent-fallen-in-love/
+<a href="http://www.elephantjournal.com/2015/07/5-reasons-why-you-havent-fallen-in-love/" target="_blank">http://www.elephantjournal.com/2015/07/5-reasons-why-you-havent-fallen-in-love/</a>
 
-http://www.elephantjournal.com/2015/07/masculine-presence-feminine-love/
+<a href="http://www.elephantjournal.com/2015/07/masculine-presence-feminine-love/" target="_blank">http://www.elephantjournal.com/2015/07/masculine-presence-feminine-love/</a>
 
-https://en.wikipedia.org/wiki/Biomimetics
+<a href="https://en.wikipedia.org/wiki/Biomimetics" target="_blank">https://en.wikipedia.org/wiki/Biomimetics</a>
 
-http://www.mindbodygreen.com/0-20516/the-only-yoga-pose-you-need-for-great-sleep.html
+<a href="http://www.mindbodygreen.com/0-20516/the-only-yoga-pose-you-need-for-great-sleep.html" target="_blank">http://www.mindbodygreen.com/0-20516/the-only-yoga-pose-you-need-for-great-sleep.html</a>
 
-https://robertscribbler.wordpress.com/2015/06/29/half-a-million-acres-burned-in-just-one-day-alaska-shatters-record-for-worst-june-wildfire-outbreak-ever/
+<a href="https://robertscribbler.wordpress.com/2015/06/29/half-a-million-acres-burned-in-just-one-day-alaska-shatters-record-for-worst-june-wildfire-outbreak-ever/" target="_blank">https://robertscribbler.wordpress.com/2015/06/29/half-a-million-acres-burned-in-just-one-day-alaska-shatters-record-for-worst-june-wildfire-outbreak-ever/</a>
 
-http://www.treehugger.com/urban-design/urban-greenprint-biomimicry-applied-city.html
+<a href="http://www.treehugger.com/urban-design/urban-greenprint-biomimicry-applied-city.html" target="_blank">http://www.treehugger.com/urban-design/urban-greenprint-biomimicry-applied-city.html</a>
 
-http://www.huffingtonpost.com/dave-johnson/now-we-know-why-huge-tpp_b_6956540.html?ncid=fcbklnkushpmg00000015
+<a href="http://www.huffingtonpost.com/dave-johnson/now-we-know-why-huge-tpp_b_6956540.html?ncid=fcbklnkushpmg00000015" target="_blank">http://www.huffingtonpost.com/dave-johnson/now-we-know-why-huge-tpp_b_6956540.html?ncid=fcbklnkushpmg00000015</a>
 
-http://www.theguardian.com/books/2015/jul/03/anarchism-could-help-save-the-world
+<a href="http://www.theguardian.com/books/2015/jul/03/anarchism-could-help-save-the-world" target="_blank">http://www.theguardian.com/books/2015/jul/03/anarchism-could-help-save-the-world</a>
 
-http://www.asknature.org/
+<a href="http://www.asknature.org/" target="_blank">http://www.asknature.org/</a>
 
-http://www.upi.com/Science_News/2015/06/30/Some-bird-calls-resemble-primitive-human-language/7591435694989/?spt=mps&or=7&sn=sn
+<a href="http://www.upi.com/Science_News/2015/06/30/Some-bird-calls-resemble-primitive-human-language/7591435694989/?spt=mps&or=7&sn=sn" target="_blank">http://www.upi.com/Science_News/2015/06/30/Some-bird-calls-resemble-primitive-human-language/7591435694989/?spt=mps&or=7&sn=sn</a>
 
 ---
 
@@ -66,10 +66,10 @@ Restorative Design
 
 ---
 
-http://goodmenproject.com/featured-content/psychology-behind-whether-possible-friends-ex-kt/
+<a href="http://goodmenproject.com/featured-content/psychology-behind-whether-possible-friends-ex-kt/" target="_blank">http://goodmenproject.com/featured-content/psychology-behind-whether-possible-friends-ex-kt/</a>
 
-http://www.elephantjournal.com/2013/06/are-you-being-authentic-4-ways-your-body-knows/
+<a href="http://www.elephantjournal.com/2013/06/are-you-being-authentic-4-ways-your-body-knows/" target="_blank">http://www.elephantjournal.com/2013/06/are-you-being-authentic-4-ways-your-body-knows/</a>
 
-http://www.mindbodygreen.com/0-13996/5-signs-youre-with-the-wrong-person.html
+<a href="http://www.mindbodygreen.com/0-13996/5-signs-youre-with-the-wrong-person.html" target="_blank">http://www.mindbodygreen.com/0-13996/5-signs-youre-with-the-wrong-person.html</a>
 
-http://goodmenproject.com/featured-content/call-off-lawyers-3-surprising-signs-youre-still-love-hesaid/
+<a href="http://goodmenproject.com/featured-content/call-off-lawyers-3-surprising-signs-youre-still-love-hesaid/" target="_blank">http://goodmenproject.com/featured-content/call-off-lawyers-3-surprising-signs-youre-still-love-hesaid/</a>
