--- a/notes/20150127.md
+++ b/notes/20150127.md
@@ -1,6 +1,6 @@
 Clay Thompson in the zone
 
-https://www.youtube.com/watch?v=ZSYuJCX28Oc&feature=youtu.be
+<a href="https://www.youtube.com/watch?v=ZSYuJCX28Oc&feature=youtu.be" target="_blank">https://www.youtube.com/watch?v=ZSYuJCX28Oc&feature=youtu.be</a>
 
 Enigma is zone.
 
