--- a/notes/20150208.md
+++ b/notes/20150208.md
@@ -1,3 +1,3 @@
 There are many secrets.
 
-https://www.youtube.com/watch?v=slanahLcIHY
+<a href="https://www.youtube.com/watch?v=slanahLcIHY" target="_blank">https://www.youtube.com/watch?v=slanahLcIHY</a>
