--- a/notes/20150226.md
+++ b/notes/20150226.md
@@ -4,4 +4,4 @@ I don't have visions that I'm attached to.
 
 Transcendent Purpose
 
-http://www.collective-evolution.com/2014/02/27/is-it-really-money-that-motivates-us-the-science-will-surprise-you-video/
+<a href="http://www.collective-evolution.com/2014/02/27/is-it-really-money-that-motivates-us-the-science-will-surprise-you-video/" target="_blank">http://www.collective-evolution.com/2014/02/27/is-it-really-money-that-motivates-us-the-science-will-surprise-you-video/</a>
