--- a/notes/20150305.md
+++ b/notes/20150305.md
@@ -4,7 +4,7 @@ Should the environment be owned?
 
 ---
 
-http://www.meltingasphalt.com/neurons-gone-wild/
+<a href="http://www.meltingasphalt.com/neurons-gone-wild/" target="_blank">http://www.meltingasphalt.com/neurons-gone-wild/</a>
 
 "agency is a fundamental property of the brain"
 
