--- a/notes/20150307.md
+++ b/notes/20150307.md
@@ -1,3 +1,3 @@
-https://www.youtube.com/watch?v=j2IyijbuajA
+<a href="https://www.youtube.com/watch?v=j2IyijbuajA" target="_blank">https://www.youtube.com/watch?v=j2IyijbuajA</a>
 
 Toxins are things in the wrong place.
