--- a/notes/20150321.md
+++ b/notes/20150321.md
@@ -1,3 +1,3 @@
 Realtime Climate Map
 
-http://earth.nullschool.net/
+<a href="http://earth.nullschool.net/" target="_blank">http://earth.nullschool.net/</a>
