--- a/notes/20150322.md
+++ b/notes/20150322.md
@@ -1,3 +1,3 @@
 "scientific facts are determined by the social world of scientists, not by the natural world"
 
-http://www.arvindguptatoys.com/arvindgupta/hegemony-nandy.pdf
+<a href="http://www.arvindguptatoys.com/arvindgupta/hegemony-nandy.pdf" target="_blank">http://www.arvindguptatoys.com/arvindgupta/hegemony-nandy.pdf</a>
