--- a/notes/20150413.md
+++ b/notes/20150413.md
@@ -1,14 +1,14 @@
-http://www.elephantjournal.com/2015/04/i-will-never-apologize-for-being-vulnerable/
+<a href="http://www.elephantjournal.com/2015/04/i-will-never-apologize-for-being-vulnerable/" target="_blank">http://www.elephantjournal.com/2015/04/i-will-never-apologize-for-being-vulnerable/</a>
 
-http://www.elephantjournal.com/2014/09/having-sex-vs-making-love/
+<a href="http://www.elephantjournal.com/2014/09/having-sex-vs-making-love/" target="_blank">http://www.elephantjournal.com/2014/09/having-sex-vs-making-love/</a>
 
-http://www.elephantjournal.com/2014/07/18-spiritual-teachings-that-blew-my-mind-wide-open/
+<a href="http://www.elephantjournal.com/2014/07/18-spiritual-teachings-that-blew-my-mind-wide-open/" target="_blank">http://www.elephantjournal.com/2014/07/18-spiritual-teachings-that-blew-my-mind-wide-open/</a>
 
-http://www.elephantjournal.com/2009/02/chogyam-trungpa-rinpoche-pema-chodron-the-buddhist-view-of-loneliness-as-a-good-thing/
+<a href="http://www.elephantjournal.com/2009/02/chogyam-trungpa-rinpoche-pema-chodron-the-buddhist-view-of-loneliness-as-a-good-thing/" target="_blank">http://www.elephantjournal.com/2009/02/chogyam-trungpa-rinpoche-pema-chodron-the-buddhist-view-of-loneliness-as-a-good-thing/</a>
 
-http://www.elephantjournal.com/2015/04/i-still-put-on-lipstick-before-he-gets-home-25-ways-to-keep-your-love-alive/
+<a href="http://www.elephantjournal.com/2015/04/i-still-put-on-lipstick-before-he-gets-home-25-ways-to-keep-your-love-alive/" target="_blank">http://www.elephantjournal.com/2015/04/i-still-put-on-lipstick-before-he-gets-home-25-ways-to-keep-your-love-alive/</a>
 
-http://www.elephantjournal.com/2011/08/why-heartbreak-is-the-best-thing-your-yoga-has-ever-had-an-interview-with-bhakti-yogi-sara-ivanhoe/
+<a href="http://www.elephantjournal.com/2011/08/why-heartbreak-is-the-best-thing-your-yoga-has-ever-had-an-interview-with-bhakti-yogi-sara-ivanhoe/" target="_blank">http://www.elephantjournal.com/2011/08/why-heartbreak-is-the-best-thing-your-yoga-has-ever-had-an-interview-with-bhakti-yogi-sara-ivanhoe/</a>
 
 ---
 
