--- a/notes/20150519.md
+++ b/notes/20150519.md
@@ -1,25 +1,25 @@
-http://www.bustle.com/articles/80357-14-signs-someone-is-a-grown-ass-man-because-dating-him-is-so-completely-different
+<a href="http://www.bustle.com/articles/80357-14-signs-someone-is-a-grown-ass-man-because-dating-him-is-so-completely-different" target="_blank">http://www.bustle.com/articles/80357-14-signs-someone-is-a-grown-ass-man-because-dating-him-is-so-completely-different</a>
 
-http://goodmenproject.com/featured-content/the-summer-i-became-a-man-kcon/
+<a href="http://goodmenproject.com/featured-content/the-summer-i-became-a-man-kcon/" target="_blank">http://goodmenproject.com/featured-content/the-summer-i-became-a-man-kcon/</a>
 
-http://www.elephantjournal.com/2015/05/an-empaths-guide-to-mercury-retrograde/
+<a href="http://www.elephantjournal.com/2015/05/an-empaths-guide-to-mercury-retrograde/" target="_blank">http://www.elephantjournal.com/2015/05/an-empaths-guide-to-mercury-retrograde/</a>
 
-http://www.elephantjournal.com/2015/05/5-dos-donts-for-your-love-life-during-mercury-retrograde-may-18-to-june-11/
+<a href="http://www.elephantjournal.com/2015/05/5-dos-donts-for-your-love-life-during-mercury-retrograde-may-18-to-june-11/" target="_blank">http://www.elephantjournal.com/2015/05/5-dos-donts-for-your-love-life-during-mercury-retrograde-may-18-to-june-11/</a>
 
-http://goodmenproject.com/featured-content/5-easy-ways-get-girl-just-isnt-working-hesaid/
+<a href="http://goodmenproject.com/featured-content/5-easy-ways-get-girl-just-isnt-working-hesaid/" target="_blank">http://goodmenproject.com/featured-content/5-easy-ways-get-girl-just-isnt-working-hesaid/</a>
 
-http://goodmenproject.com/featured-content/kt-4-reasons-why-we-want-that-one-person-that-we-cant-have/
+<a href="http://goodmenproject.com/featured-content/kt-4-reasons-why-we-want-that-one-person-that-we-cant-have/" target="_blank">http://goodmenproject.com/featured-content/kt-4-reasons-why-we-want-that-one-person-that-we-cant-have/</a>
 
-http://www.elephantjournal.com/2014/11/3-lies-that-make-our-relationships-suck-how-to-tell-the-truth/
+<a href="http://www.elephantjournal.com/2014/11/3-lies-that-make-our-relationships-suck-how-to-tell-the-truth/" target="_blank">http://www.elephantjournal.com/2014/11/3-lies-that-make-our-relationships-suck-how-to-tell-the-truth/</a>
 
-http://www.yourtango.com/2015274167/childless-by-choice-women-are-the-reason-society-is-deteroriating
+<a href="http://www.yourtango.com/2015274167/childless-by-choice-women-are-the-reason-society-is-deteroriating" target="_blank">http://www.yourtango.com/2015274167/childless-by-choice-women-are-the-reason-society-is-deteroriating</a>
 
-http://www.elephantjournal.com/2014/09/denial-and-reality-what-your-exs-new-girlfriend-has-to-do-with-enlightenment/
+<a href="http://www.elephantjournal.com/2014/09/denial-and-reality-what-your-exs-new-girlfriend-has-to-do-with-enlightenment/" target="_blank">http://www.elephantjournal.com/2014/09/denial-and-reality-what-your-exs-new-girlfriend-has-to-do-with-enlightenment/</a>
 
-http://goodmenproject.com/featured-content/8-signs-youve-found-the-woman-you-should-make-your-wife-grgs/
+<a href="http://goodmenproject.com/featured-content/8-signs-youve-found-the-woman-you-should-make-your-wife-grgs/" target="_blank">http://goodmenproject.com/featured-content/8-signs-youve-found-the-woman-you-should-make-your-wife-grgs/</a>
 
-http://goodmenproject.com/featured-content/10-signs-youve-made-a-mistake-and-let-the-wrong-person-go-grgs/
+<a href="http://goodmenproject.com/featured-content/10-signs-youve-made-a-mistake-and-let-the-wrong-person-go-grgs/" target="_blank">http://goodmenproject.com/featured-content/10-signs-youve-made-a-mistake-and-let-the-wrong-person-go-grgs/</a>
 
-http://goodmenproject.com/featured-content/your-brain-on-pornography-wcz/
+<a href="http://goodmenproject.com/featured-content/your-brain-on-pornography-wcz/" target="_blank">http://goodmenproject.com/featured-content/your-brain-on-pornography-wcz/</a>
 
-http://www.elephantjournal.com/2014/11/some-thoughts-on-making-friends-from-someone-who-doesnt-have-very-many/
+<a href="http://www.elephantjournal.com/2014/11/some-thoughts-on-making-friends-from-someone-who-doesnt-have-very-many/" target="_blank">http://www.elephantjournal.com/2014/11/some-thoughts-on-making-friends-from-someone-who-doesnt-have-very-many/</a>
