--- a/notes/20150520.md
+++ b/notes/20150520.md
@@ -1,8 +1,8 @@
-http://www.elephantjournal.com/2013/05/soul-connection-the-deepest-kind-of-relationship/
+<a href="http://www.elephantjournal.com/2013/05/soul-connection-the-deepest-kind-of-relationship/" target="_blank">http://www.elephantjournal.com/2013/05/soul-connection-the-deepest-kind-of-relationship/</a>
 
-http://www.elephantjournal.com/2014/03/morning-breath-meets-morning-wood-radical-intimacy-the-morning-after/
+<a href="http://www.elephantjournal.com/2014/03/morning-breath-meets-morning-wood-radical-intimacy-the-morning-after/" target="_blank">http://www.elephantjournal.com/2014/03/morning-breath-meets-morning-wood-radical-intimacy-the-morning-after/</a>
 
-http://www.elephantjournal.com/2015/05/dont-believe-him-poem/
+<a href="http://www.elephantjournal.com/2015/05/dont-believe-him-poem/" target="_blank">http://www.elephantjournal.com/2015/05/dont-believe-him-poem/</a>
 
 ---
 
