--- a/notes/20150522.md
+++ b/notes/20150522.md
@@ -1,1 +1,1 @@
-http://www.elephantjournal.com/2015/05/loving-understanding-an-empath/
+<a href="http://www.elephantjournal.com/2015/05/loving-understanding-an-empath/" target="_blank">http://www.elephantjournal.com/2015/05/loving-understanding-an-empath/</a>
