--- a/notes/20150611.md
+++ b/notes/20150611.md
@@ -1,14 +1,14 @@
-http://www.elephantjournal.com/2015/06/humanity-makes-me-so-fcking-sad-sometimes/
+<a href="http://www.elephantjournal.com/2015/06/humanity-makes-me-so-fcking-sad-sometimes/" target="_blank">http://www.elephantjournal.com/2015/06/humanity-makes-me-so-fcking-sad-sometimes/</a>
 
-http://www.mindbodygreen.com/0-16639/the-1-communication-trick-to-deepen-your-relationship.html
+<a href="http://www.mindbodygreen.com/0-16639/the-1-communication-trick-to-deepen-your-relationship.html" target="_blank">http://www.mindbodygreen.com/0-16639/the-1-communication-trick-to-deepen-your-relationship.html</a>
 
-http://goodmenproject.com/featured-content/what-it-feels-like-when-youre-always-an-option-and-never-a-priority-kt/
+<a href="http://goodmenproject.com/featured-content/what-it-feels-like-when-youre-always-an-option-and-never-a-priority-kt/" target="_blank">http://goodmenproject.com/featured-content/what-it-feels-like-when-youre-always-an-option-and-never-a-priority-kt/</a>
 
-http://www.elephantjournal.com/2015/02/how-to-deal-with-what-you-feel-4-breakthrough-guidelines-for-facing-difficult-times/
+<a href="http://www.elephantjournal.com/2015/02/how-to-deal-with-what-you-feel-4-breakthrough-guidelines-for-facing-difficult-times/" target="_blank">http://www.elephantjournal.com/2015/02/how-to-deal-with-what-you-feel-4-breakthrough-guidelines-for-facing-difficult-times/</a>
 
-http://www.collective-evolution.com/2015/06/10/could-these-key-factors-be-the-reason-you-arent-losing-belly-fat/
+<a href="http://www.collective-evolution.com/2015/06/10/could-these-key-factors-be-the-reason-you-arent-losing-belly-fat/" target="_blank">http://www.collective-evolution.com/2015/06/10/could-these-key-factors-be-the-reason-you-arent-losing-belly-fat/</a>
 
-http://www.elephantjournal.com/2014/09/6-ways-to-spot-the-energy-suckers-in-your-life/
+<a href="http://www.elephantjournal.com/2014/09/6-ways-to-spot-the-energy-suckers-in-your-life/" target="_blank">http://www.elephantjournal.com/2014/09/6-ways-to-spot-the-energy-suckers-in-your-life/</a>
 
 ---
 
@@ -30,13 +30,13 @@ It's good to be in the zone.
 
 ---
 
-http://www.becomingminimalist.com/escaping-excessive-consumerism/
+<a href="http://www.becomingminimalist.com/escaping-excessive-consumerism/" target="_blank">http://www.becomingminimalist.com/escaping-excessive-consumerism/</a>
 
 Less stimulation means you will fill in the blanks.
 
 ---
 
-http://goodmenproject.com/featured-content/the-advice-nobody-gives-men-its-your-fault-youre-single-hesaid/
+<a href="http://goodmenproject.com/featured-content/the-advice-nobody-gives-men-its-your-fault-youre-single-hesaid/" target="_blank">http://goodmenproject.com/featured-content/the-advice-nobody-gives-men-its-your-fault-youre-single-hesaid/</a>
 
 ---
 
@@ -48,6 +48,6 @@ Curanderismo
 
 ---
 
-http://www.elephantjournal.com/2012/08/boycott-these-organic-natural-traitors/
+<a href="http://www.elephantjournal.com/2012/08/boycott-these-organic-natural-traitors/" target="_blank">http://www.elephantjournal.com/2012/08/boycott-these-organic-natural-traitors/</a>
 
-http://www.filmsforaction.org/watch/utopia-2014/
+<a href="http://www.filmsforaction.org/watch/utopia-2014/" target="_blank">http://www.filmsforaction.org/watch/utopia-2014/</a>
