--- a/notes/20150705.md
+++ b/notes/20150705.md
@@ -1,10 +1,10 @@
-http://bigthink.com/ideafeed/150-years-after-maxwell-scientists-discover-fundamental-property-of-light
+<a href="http://bigthink.com/ideafeed/150-years-after-maxwell-scientists-discover-fundamental-property-of-light" target="_blank">http://bigthink.com/ideafeed/150-years-after-maxwell-scientists-discover-fundamental-property-of-light</a>
 
-http://www.businessinsider.com/napoleon-hill-think-and-grow-rich-2015-7?utm_content=buffer704cf&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer
+<a href="http://www.businessinsider.com/napoleon-hill-think-and-grow-rich-2015-7?utm_content=buffer704cf&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer" target="_blank">http://www.businessinsider.com/napoleon-hill-think-and-grow-rich-2015-7?utm_content=buffer704cf&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer</a>
 
-http://www.alternet.org/economy/ten-numbers-rich-would-fudged?sc=fb
+<a href="http://www.alternet.org/economy/ten-numbers-rich-would-fudged?sc=fb" target="_blank">http://www.alternet.org/economy/ten-numbers-rich-would-fudged?sc=fb</a>
 
-http://link.springer.com/article/10.1007%2Fs10668-012-9337-9
+<a href="http://link.springer.com/article/10.1007%2Fs10668-012-9337-9" target="_blank">http://link.springer.com/article/10.1007%2Fs10668-012-9337-9</a>
 
 ---
 
@@ -19,3 +19,15 @@ Many perspectives.
 Prepare the world for your full expression.
 
 Prepare the world for your full power.
+
+---
+
+<a href="http://singularityhub.com/2015/06/28/kurzweil-responds-to-when-robots-are-everywhere-what-will-humans-be-good-for-video/" target="_blank">http://singularityhub.com/2015/06/28/kurzweil-responds-to-when-robots-are-everywhere-what-will-humans-be-good-for-video/</a>
+
+---
+
+How can we bring out the best in ourselves & each other.
+
+---
+
+Empathetic movie index
